*Empty MediaWiki Message*

--- a/गिरीं.mw
+++ b/गिरीं.mw
@@ -22,3 +22,4 @@
 सगळ्यांत लागीं आग पालोवपाची सुविधा MAPUSA (३ किमी) हांगां आसा.
 
 == वैजकी सुविधा (शासकीय) ==
+सगळ्यांत लागीं अ‍ॅलोपॅथी रुग्णालय ३ किमी हांगां आसा.
