--- a/अँग्लो_इंडियन_साहित्य.mw
+++ b/अँग्लो_इंडियन_साहित्य.mw
@@ -9,7 +9,7 @@
 
 अठराव्या शेंकड्यांत झुजां आनी अराजक हांकां लागून बरीच उणी बरपावळ जाली. हे वेळार रॉबर्ट ऑर्मे (१७२७-१८०१) हाचें ‘ हिस्टरी ऑफ मिलीटरी ट्रान्झेंक्शन्स ऑफ [[ब्रिटीश]] नेशन इन इंडोस्तान ’ हें [[पुस्तक]] गाजलें. हाका जाणकारानीं ब्रिटिशांच्या भारतांतल्या सुर्वेच्या लशकरी जैताचें ‘ गद्य महाकाव्य ’ अशें म्हळां.
 
-सर विल्यम जोन्स (१७४६-१७९४) हाची १७८३ त सर्वोच्च न्यायालयाचो न्यायाधीश म्हूण जाल्ली नेमणूक अँग्लो इंडियन साहित्या विशींच न्हय, तर उदेंत-अस्तंत संबंदाचे नदरेंतल्यानय भोव म्हत्वाची थारली. ह्या व्हड संस्कृत पंडितान एशियाटिक सोसायटी ऑफ बंगालची थापणूक करून कालिदासाचें ‘ शाकुंतल ’ इंग्लेज भाशेंत अणकारित केलें. भारतीय पुराणांतल्या बऱ्याच साहित्याचो इंग्लीश भाशेंत अणकार करपी तो पयलो अँग्लो इंडियन कवी थारलो.
+सर विल्यम जोन्स (१७४६-१७९४) हाची १७८३ त सर्वोच्च न्यायालयाचो न्यायाधीश म्हूण जाल्ली नेमणूक अँग्लो इंडियन साहित्या विशींच न्हय, तर उदेंत-अस्तंत संबंदाचे नदरेंतल्यानय भोव म्हत्वाची थारली. ह्या व्हड संस्कृत पंडितान एशियाटिक सोसायटी ऑफ बंगालची थापणूक करून कालिदासाचें ‘ शाकुंतल ’ इंग्लेज भाशेंत अणकारीत केलें. भारतीय पुराणांतल्या बऱ्याच साहित्याचो इंग्लीश भाशेंत अणकार करपी तो पयलो अँग्लो इंडियन कवी थारलो.
 
 १९ व्या शतमानाचे सुर्वेक अँग्लो इंडियन साहित्यांत भर घालपी म्हत्वाच्या बरोवप्यां मदीं जॉन लिडेन (१७७५-१८११), ह्यू बॉयड, फ्रॅन्कोटर्क रेमण्ड, हेन्ऱी टॉमस कोलब्रूक, जेम्स टॉड, मार्क विल्क्स, एलिझा फे, मेरी मार्था शेरवूड हांचो आस्पाव जाता.१८५६ तल्या स्वतंत्रताय लढ्य उपरांतची तीन वा चार दशकां भारतांत इंग्लीश भाशेचो फुडार थारावपी आशिल्लीं. ह्या काळांत मॅकॉलेच्या शिक्षण पध्दतीचे बुन्यादीचेर (१८३५) भारतांतल्या उंचेल्या पावंड्या वयल्या शिक्षणा खातीर इंग्लीश भाशेचें माध्यम वापरपाचें थारलें. हाचो परिणाम जावन भारतीय लोक फकत माध्यमापुरत्योच न्हय तर आपल्यो कल्पना आनी भावना उक्तावंक इंग्लीश भाशेचो वापर करूंक लागले. हाचे उपरांत इंग्लीशींतल्यान सर्जनशील अभिव्यक्ती करूंक भारतीयांक कळाव लागलो ना. हातूंतल्यान इंडो-अँग्लियन वा इंग्लीशींतल्यान बरयिल्लें भारतीय साहित्य ही स्वतंत्र आनी नवी साहित्य परंपरा निर्माण जाली.
 
