--- a/अडणें.mw
+++ b/अडणें.mw
@@ -63,7 +63,7 @@
 == शैक्षणिक सुविधा ==  
  
 सगळ्यांत लागीं पूर्व-प्राथमिक शाळा (बाळ्ळी) ५ किलोमिटरा परस कमी अंतराचेर आसा.
-गांवांत ३ शासकीय प्राथमिक शाळा आसा. 
+गांवांत ३ सरकारी प्राथमिक शाळा आसा. 
 सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (बाळ्ळी) ५ किलोमिटरा परस कमी अंतराचेर आसा.
 सगळ्यांत लागीं माध्यमिक शाळा (बाळ्ळी) ५ किलोमिटरा परस कमी अंतराचेर आसा.
 सगळ्यांत लागीं उच्च माध्यमिक शाळा (कुंकळे) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
