--- a/गिरीं.mw
+++ b/गिरीं.mw
@@ -26,3 +26,4 @@
 सगळ्यांत लागीं पर्यायी वैजकी रुग्णालय ५१ किमी हांगां आसा.
 शारांत १ दवाखानो आसा.
 शारांत १ कुटूंब कल्याण केंद्र आसा.
+शारांत १ प्रसूती आनी बालकल्याण केंद्र आसा.
