--- a/अँग्लो_इंडियन_साहित्य.mw
+++ b/अँग्लो_इंडियन_साहित्य.mw
@@ -7,7 +7,7 @@
 
 ह्या भोंवडे वर्णनांतलीं कांय नांव घेवपासारकीं म्हळ्यार, जहाँगीराच्या दरबारांत आशिल्लो इंग्लीश राजदूत सर थॉमस रो, एडवर्ड टेरी (रिलेशन ऑफ अ व्होएज टू ईस्टर्न इंडिया), विल्यम मॅथोल्ड (रिलेशन ऑफ द किंग्डम ऑफ गोलकोंडा) आनी जॉन फ्रेयर (न्यू अकावंट ऑफ इस्ट इंडिया अँड पर्शिया)
 
-अठराव्या शेंकड्यांत झुजां आनी अराजक हांकां लागून बरीच उणी बरपावळ जाली. हे वेळार रॉबर्ट ऑर्मे (१७२७-१८०१) हाचें ‘ हिस्टरी ऑफ मिलीटरी ट्रान्झेंक्शन्स ऑफ [[ब्रिटीश]] नेशन इन इंडोस्तान ’ हें [[पुस्तक]] गाजलें. हाका जाणकारानीं ब्रिटिशांच्या भारतांतल्या सुर्वेच्या लशकरी जैताचें ‘ गद्य महाकाव्य ’ अशें म्हळां.
+अठराव्या शेंकड्यांत झुजां आनी अराजक हांकां लागून बरीच उणी बरपावळ जाली. हे वेळार रॉबर्ट ऑर्मे (१७२७-१८०१) हाचें ‘ हिस्टरी ऑफ मिलीटरी ट्रान्झेंक्शन्स ऑफ [[ब्रिटीश]] नेशन इन इंडोस्तान ’ हें [[पुस्तक]] गाजलें. हाका जाणकारांनीं ब्रिटिशांच्या भारतांतल्या सुर्वेच्या लशकरी जैताचें ‘ गद्य महाकाव्य ’ अशें म्हळां.
 
 सर विल्यम जोन्स (१७४६-१७९४) हाची १७८३ त सर्वोच्च न्यायालयाचो न्यायाधीश म्हूण जाल्ली नेमणूक अँग्लो इंडियन साहित्या विशींच न्हय, तर उदेंत-अस्तंत संबंदाचे नदरेंतल्यानय भोव म्हत्वाची थारली. ह्या व्हड संस्कृत पंडितान एशियाटिक सोसायटी ऑफ बंगालची थापणूक करून कालिदासाचें ‘ शाकुंतल ’ इंग्लेज भाशेंत अणकारीत केलें. भारतीय पुराणांतल्या बऱ्याच साहित्याचो इंग्लीश भाशेंत अणकार करपी तो पयलो अँग्लो इंडियन कवी थारलो.
 
