--- a/कासारवर्णे.mw
+++ b/कासारवर्णे.mw
@@ -33,3 +33,5 @@
 गांवांत १ खाजगी पूर्व-प्राथमिक शाळा आसा.
 गांवांत २ शासकीय प्राथमिक शाळा आसा. 
 ﻿गांवांत १ शासकीय कनिष्ठ माध्यमिक शाळा  आसा.
+सगळ्यांत लागीं माध्यमिक शाळा (OZORIM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+सगळ्यांत लागीं उच्च माध्यमिक शाळा (PERNEM) १० किलोमिटर परस चड अंतराचेर आसा.
