--- a/कासारवर्णे.mw
+++ b/कासारवर्णे.mw
@@ -35,3 +35,5 @@
 ﻿गांवांत १ शासकीय कनिष्ठ माध्यमिक शाळा  आसा.
 सगळ्यांत लागीं माध्यमिक शाळा (OZORIM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 सगळ्यांत लागीं उच्च माध्यमिक शाळा (PERNEM) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं पदवी महाविद्यालय (PERNEM RURAL) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (BANDORA C T) १० किलोमिटर परस चड अंतराचेर आसा.
