--- a/गिरीं.mw
+++ b/गिरीं.mw
@@ -27,3 +27,4 @@
 शारांत १ दवाखानो आसा.
 शारांत १ कुटूंब कल्याण केंद्र आसा.
 शारांत १ प्रसूती आनी बालकल्याण केंद्र आसा.
+सगळ्यांत लागीं प्रसूती केंद्र ३ किमी हांगां आसा.
