--- a/गिरीं.mw
+++ b/गिरीं.mw
@@ -28,3 +28,4 @@
 शारांत १ कुटूंब कल्याण केंद्र आसा.
 शारांत १ प्रसूती आनी बालकल्याण केंद्र आसा.
 सगळ्यांत लागीं प्रसूती केंद्र ३ किमी हांगां आसा.
+सगळ्यांत लागीं क्षयरोग उपचार केंद्र  १५ किमी हांगां आसा.
