--- a/कुर्टी.mw
+++ b/कुर्टी.mw
@@ -19,3 +19,5 @@
 शारांत उकती आनी बंद गटारवेवस्था आसा. ल्हान धरणांतल्यान उदकापुरवण जाता. शाराक शुध्दीकरण केल्ल्या नळाच्या उदकाची पुरवण जाता.उदका पुरवणेची तांक 1400 किलो लिटर आसा.सगळ्यांत लागीं आग पालोवपाची सुविधा PONDA (२ किमी) हांगां आसा.
 
 वैजकी सुविधा (शासकीय)
+
+सगळ्यांत लागीं अ‍ॅलोपॅथी रुग्णालय २ किमी हांगां आसा. सगळ्यांत लागीं पर्यायी वैजकी रुग्णालय १४ किमी हांगां आसा. सगळ्यांत लागीं दवाखानो २
