*Empty MediaWiki Message*

--- a/गिरीं.mw
+++ b/गिरीं.mw
@@ -29,3 +29,4 @@
 शारांत १ प्रसूती आनी बालकल्याण केंद्र आसा.
 सगळ्यांत लागीं प्रसूती केंद्र ३ किमी हांगां आसा.
 सगळ्यांत लागीं क्षयरोग उपचार केंद्र  १५ किमी हांगां आसा.
+सगळ्यांत लागीं रुग्णालय ० किमी हांगां आसा.
