--- a/गिरीं.mw
+++ b/गिरीं.mw
@@ -30,3 +30,4 @@
 सगळ्यांत लागीं प्रसूती केंद्र ३ किमी हांगां आसा.
 सगळ्यांत लागीं क्षयरोग उपचार केंद्र  १५ किमी हांगां आसा.
 सगळ्यांत लागीं रुग्णालय ० किमी हांगां आसा.
+सगळ्यांत लागीं पशुवैजकी रुग्णालय  ३ किमी हांगां आसा.
