--- a/कुर्टी.mw
+++ b/कुर्टी.mw
@@ -20,4 +20,4 @@
 
 वैजकी सुविधा (शासकीय)
 
-सगळ्यांत लागीं अ‍ॅलोपॅथी रुग्णालय २ किमी हांगां आसा. सगळ्यांत लागीं पर्यायी वैजकी रुग्णालय १४ किमी हांगां आसा. सगळ्यांत लागीं दवाखानो २
+सगळ्यांत लागीं अ‍ॅलोपॅथी रुग्णालय २ किमी हांगां आसा. सगळ्यांत लागीं पर्यायी वैजकी रुग्णालय १४ किमी हांगां आसा. सगळ्यांत लागीं दवाखानो २ किमी हांगां आसा. सगळ्यांत लागीं कुटूंब कल्याण केंद्र २ किमी हांगां आसा. सगळ्यांत लागीं प्रसूती आनी बालकल्याण केंद्र २ किमी हांगां आसा.
