--- a/करमळी.mw
+++ b/करमळी.mw
@@ -25,3 +25,7 @@
 
 == करमळी (६२६७१८) ==
 करमळे हे उत्तर गोवा जिल्ह्यातल्या तिसवाडी तालुक्यातील १३३३.८९ हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या गावात ११९५ कुटुंबाचे व पुराय ५१७९ लोकसंख्या आसा. हांगा लागीचे शार PANAJI १३ किलोमीटर अंतरावर आसा. हांगा २५१८ दादले आनीक २६६१ बायला आसा. हांगा अनुसूचित जातीचे लोक ६२ आसून अनुसूचित जमातीचे २२९९ लोक आसात. ह्या गावाचो जनगणनेतलो स्थल निर्देशांक ६२६७१८  <ref>http://www.censusindia.gov.in/2011census/dchb/DCHB.html</ref> आसा.
+== साक्षरताय ==  
+* एकूण साक्षर लोकसंख्या: ४०७९
+* साक्षर पुरुश लोकसंख्या: २१२३ (८४.३१%)
+* साक्षर स्त्री लोकसंख्या: १९५६ (७३.५१%)
