--- a/कासारवर्णे.mw
+++ b/कासारवर्णे.mw
@@ -43,3 +43,5 @@
 सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (TUEM) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  (PERNEM) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा (PENHA-DE-FRANCA C T) १० किलोमिटर परस चड अंतराचेर आसा.
+== वैजकी सुविधा (शासकीय) ==
+सगळ्यांत लागीं समाजिक आरोग्य केंद्र १० किलोमिटर परस चड अंतराचेर आसा.
