--- a/भाटी.mw
+++ b/भाटी.mw
@@ -1,3 +1,8 @@
 == भाटी (६२७००६) ==
 
 भाटी हे दक्षिण गोवा जिल्ह्यातल्या सांगें तालुक्यातील २९९६ हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या गावात ४३८ कुटुंबाचे व पुराय १९३३ लोकसंख्या आसा. हांगा लागीचे शार SANGUEM १२ किलोमीटर अंतरावर आसा. हांगा ९५९ दादले आनीक ९७४ बायला आसा. हांगा अनुसूचित जातीचे लोक ४ आसून अनुसूचित जमातीचे ७६८ लोक आसात. ह्या गावाचो जनगणनेतलो स्थल निर्देशांक ६२७००६  <ref>http://www.censusindia.gov.in/2011census/dchb/DCHB.html</ref> आसा.
+
+== साक्षरताय ==  
+* एकूण साक्षर लोकसंख्या: १४२१
+* साक्षर पुरुश लोकसंख्या: ७६७ (७९.९८%)
+* साक्षर स्त्री लोकसंख्या: ६५४ (६७.१५%)
