--- a/कासारवर्णे.mw
+++ b/कासारवर्णे.mw
@@ -47,3 +47,5 @@
 सगळ्यांत लागीं समाजिक आरोग्य केंद्र १० किलोमिटर परस चड अंतराचेर आसा.
 ﻿गांवांत १ प्राथमिक आरोग्य केंद्र आसा.
 ﻿गांवांत १ प्राथमिक आरोग्य उपकेंद्र  आसा.
+सगळ्यांत लागीं प्रसूति आनी बालकल्याण केंद्र १० किलोमिटर परस चड अंतराचेर आसा.
+﻿गांवांत १ क्षयरोग उपचार केंद्र  आसा.
