--- a/करमळी.mw
+++ b/करमळी.mw
@@ -34,3 +34,12 @@
 ﻿गांवांत १ शासकीय प्राथमिक शाळा आसा. ﻿गांवांत १ खाजगी प्राथमिक शाळा आसा.
  गांवांत २ खाजगी कनिष्ठ माध्यमिक शाळा  आसा.
  गांवांत २ खाजगी माध्यमिक शाळा आसा.
+सगळ्यांत लागीं उच्च माध्यमिक शाळा (ELLA) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+ सगळ्यांत लागीं पदवी महाविद्यालय (CANDOLA C T) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+ सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (BANDORA C T) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM C T) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं वैवस्थापन  संस्था  (PANAJI) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+ सगळ्यांत लागीं पॉलिटेक्निक (PANAJI) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (GOAVELHA C T) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+ सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  (PANAJI) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा (ELLA) ५ किलोमिटरा परस कमी अंतराचेर आसा.
