--- a/अडणें.mw
+++ b/अडणें.mw
@@ -117,7 +117,7 @@
 
 == नितळसाण ==
 गांवांत बंद गटार उपलब्ध ना.
-गांवांत उघडें गटार उपलब्ध आसा.
+गांवांत उगडें गटार उपलब्ध आसा.
 नीट जलस्त्रोतांत सोडिल्ले सांड उदक
 हें क्षेत्र पुराय तरेन स्वच्छता अभियानांत ना
 गांवांत न्हाणीघर आनी सार्वजनिक स्वच्छता घर  उपलब्ध ना.
@@ -137,7 +137,7 @@
 गांवांत मोबाईल फोन सुवीधा उपलब्ध आसा.
 गांवांत इंटरनेट सुवीधा उपलब्ध ना.सगळ्यांत लागीं इंटरनेट सुवीधा ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 गांवांत खाजगी कूरियर उपलब्ध ना.सगळ्यांत लागीं खाजगी कूरियर ५ ते १० किलोमिटराच्या अंतराचेर आसा.
-गांवांत शासकीय बस सेवा उपलब्ध ना.सगळ्यांत लागीं शासकीय बस सेवा ५ किलोमिटरा परस कमी अंतराचेर आसा.
+गांवांत सरकारी बस सेवा उपलब्ध ना.सगळ्यांत लागीं शासकीय बस सेवा ५ किलोमिटरा परस कमी अंतराचेर आसा.
 गांवांत खाजगी बस सेवा उपलब्ध आसा.
 गांवांत रेल्वे स्थानक उपलब्ध ना.सगळ्यांत लागीं रेल्वे स्थानक ५ किलोमिटरा परस कमी अंतराचेर आसा.
 गांवांत ऑटोरिक्षा व टमटम उपलब्ध ना.सगळ्यांत लागीं ऑटोरिक्षा व टमटम ५ किलोमिटरा परस कमी अंतराचेर आसा.
