--- a/गिरीं.mw
+++ b/गिरीं.mw
@@ -32,3 +32,4 @@
 सगळ्यांत लागीं रुग्णालय ० किमी हांगां आसा.
 सगळ्यांत लागीं पशुवैजकी रुग्णालय  ३ किमी हांगां आसा.
 सगळ्यांत लागीं फिरतो दवाखानो ० किमी हांगां आसा.
+सगळ्यांत लागीं हेर वैजकीय सुविधा १४ किमी हांगां आसा.
