--- a/भाटी.mw
+++ b/भाटी.mw
@@ -13,7 +13,7 @@
 गांवांत ३ शासकीय प्राथमिक शाळा आसा. 
 गांवांत २ शासकीय कनिष्ठ माध्यमिक शाळा  आसा. 
 ﻿गांवांत १ शासकीय माध्यमिक शाळा आसा. 
-सगळ्यांत लागीं उच्च माध्यमिक शाळा (SANGUEM) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं उच्च माध्यमिक शाळा सांगे १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं पदवी महाविद्यालय (QUEPEM) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (SIRODA) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM CT) १० किलोमिटर परस चड अंतराचेर आसा.
