--- a/करमळी.mw
+++ b/करमळी.mw
@@ -54,3 +54,12 @@
 सगळ्यांत लागीं दवाखानो ५ किलोमिटरा परस कमी अंतराचेर आसा.
 सगळ्यांत लागीं पशुवैजकी रुग्णालय १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं कुटुंब कल्याणकेंद्र १० किलोमिटर परस चड अंतराचेर आसा.
+== वैजकी सुविधा (अशासकीय) ==
+﻿गांवांत १ बाह्यरुग्ण वैजकी सुविधा आसा.
+
+
+﻿गांवांत १ एमबीबीएस पदवीधर वैजकी वेवसायी आसा.
+﻿गांवांत १  अन्य पदवीधर वैजक वेवसायी आसा.
+
+
+﻿गांवांत १ वखदालय आसा.
