*Empty MediaWiki Message*

--- a/Xonkh.mw
+++ b/Xonkh.mw
@@ -2,6 +2,8 @@
 {{Dhaktem pan}}
 …. Page needs to be Edited.
 
+[[File:Sea shell (Trinidad & Tobago 2009).jpg|thumb|Apertural view of an adult shell of the queen conch Lobatus gigas, from Trinidad & Tobago)]]
+
 Deupude[1]tolem ek mhotvachem upkoronn toxench vixxuchea hatantole ek ayudh. Devi bhagoutant hache nirmitechi kotha sanglea. Xonkhchudd namvachea doiteache tulsi vangdda gandrv pod'dotin logn zalem. Uprant ho doity khub matlo. Tannem deurajeacher svari korun sogllea devank haraile. Soglle ndevo xonkrak xoronn gele. Xonkrache ani xokhchuddachem zhuz pettlem. Funn doity morpachem chin'n disna. Karonn tachi bail mohapotiurota axil'li. Vixnnun xonkhchuddache ruf dharonn korun Seashell
 
 tulsichea potiurotacho bhong kelo. Xokhchudd melo ani tachea osethinche xonkh zalo. Vixnnuche kopott kollttokoch tulsin vixnnuk 'tum fasann zatl' oso xap dilo. Ten'na vixnnun tika sanglem, apunn gonddkidegecho paxann zatlo ani tuzo ghovo xonkhrupant aple pujent astolo.
