--- a/भाटी.mw
+++ b/भाटी.mw
@@ -9,7 +9,7 @@
 
 == शैक्षणिक सुविधा ==  
  
-सगळ्यांत लागीं पूर्व-प्राथमिक शाळा (SANGUEM) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं पूर्व-प्राथमिक शाळा सांगे १० किलोमिटर परस चड अंतराचेर आसा.
 गांवांत ३ शासकीय प्राथमिक शाळा आसा. 
 गांवांत २ शासकीय कनिष्ठ माध्यमिक शाळा  आसा. 
 ﻿गांवांत १ शासकीय माध्यमिक शाळा आसा. 
