--- a/भाटी.mw
+++ b/भाटी.mw
@@ -14,7 +14,7 @@
 गांवांत २ शासकीय कनिष्ठ माध्यमिक शाळा  आसा. 
 ﻿गांवांत १ शासकीय माध्यमिक शाळा आसा. 
 सगळ्यांत लागीं उच्च माध्यमिक शाळा सांगे १० किलोमिटर परस चड अंतराचेर आसा.
-सगळ्यांत लागीं पदवी महाविद्यालय (QUEPEM) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं पदवी महाविद्यालय केपें १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (SIRODA) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM CT) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं वैवस्थापन  संस्था  (CURCHOREM-CACORA) १० किलोमिटर परस चड अंतराचेर आसा.
