--- a/गिरीं.mw
+++ b/गिरीं.mw
@@ -37,3 +37,4 @@
 == शैक्षणिक सुविधा ==
 शारांत २ शासकीय प्राथमिक शाळा आसा. ﻿शारांत १ खाजगी प्राथमिक शाळा आसा.
 शारांत १ शासकीय कनिश्ठ माध्यमिक शाळा  आसा. ﻿शारांत १ खाजगी कनिश्ठ माध्यमिक शाळा  आसा.
+सगळ्यांत लागीं खाजगी उच्च माध्यमिक शाळा MAPUSA (३ किमी) हांगां आसा.
