--- a/गिरीं.mw
+++ b/गिरीं.mw
@@ -38,3 +38,5 @@
 शारांत २ शासकीय प्राथमिक शाळा आसा. ﻿शारांत १ खाजगी प्राथमिक शाळा आसा.
 शारांत १ शासकीय कनिश्ठ माध्यमिक शाळा  आसा. ﻿शारांत १ खाजगी कनिश्ठ माध्यमिक शाळा  आसा.
 सगळ्यांत लागीं खाजगी उच्च माध्यमिक शाळा MAPUSA (३ किमी) हांगां आसा.
+
+सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (फक्त वाणिज्य) MAPUSA (२१ किमी) हांगां आसा.
