--- a/भाटी.mw
+++ b/भाटी.mw
@@ -16,7 +16,7 @@
 सगळ्यांत लागीं उच्च माध्यमिक शाळा सांगे १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं पदवी महाविद्यालय केपें १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय शिरोडा १० किलोमिटर परस चड अंतराचेर आसा.
-सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM CT) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं वैजकी महाविद्यालय बांबोळे १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं वैवस्थापन  संस्था  (CURCHOREM-CACORA) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं पॉलिटेक्निक (CURCHOREM-CACORA) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (CURCHOREM-CACORA) १० किलोमिटर परस चड अंतराचेर आसा.
