--- a/गिरीं.mw
+++ b/गिरीं.mw
@@ -40,3 +40,4 @@
 सगळ्यांत लागीं खाजगी उच्च माध्यमिक शाळा MAPUSA (३ किमी) हांगां आसा.
 
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (फक्त वाणिज्य) MAPUSA (२१ किमी) हांगां आसा.
+सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (कला आणी शास्त्र) PANAJI (१० किमी) हांगां आसा.
