*Empty MediaWiki Message*

--- a/गिरीं.mw
+++ b/गिरीं.mw
@@ -41,3 +41,4 @@
 
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (फक्त वाणिज्य) MAPUSA (२१ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (कला आणी शास्त्र) PANAJI (१० किमी) हांगां आसा.
+सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (कला आणी वाणिज्य) PERNEM RURAL (१८ किमी) हांगां आसा.
