--- a/शिरोली.mw
+++ b/शिरोली.mw
@@ -89,3 +89,6 @@
 गांवांत खाजगी बस सेवा उपलब्ध आसा.
 गांवांत रेल्वे स्थानक उपलब्ध ना.सगळ्यांत लागीं रेल्वे स्थानक १० किलोमिटर परस चड अंतराचेर आसा.
 गांवांत ऑटोरिक्षा व टमटम उपलब्ध ना.सगळ्यांत लागीं ऑटोरिक्षा व टमटम ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत टॅक्सी उपलब्ध ना.सगळ्यांत लागीं टॅक्सी ५ किलोमिटरा परस कमी अंतराचेर आसा.
+गांवांत व्हॅन उपलब्ध ना.सगळ्यांत लागीं व्हॅन ५ किलोमिटरा परस कमी अंतराचेर आसा.
+गांवांत ट्रॅक्टर उपलब्ध ना.
