--- a/कासारवर्णे.mw
+++ b/कासारवर्णे.mw
@@ -90,3 +90,5 @@
 गांवांत सामूहिक बायोगॅस ना जाल्यार उत्पादक पुनर्वापराची वेवस्था उपलब्ध आसा.
 == दळणवळण आनीक येरादारी ==
 गांवांत पोस्ट ऑफीस उपलब्ध ना.सगळ्यांत लागीं पोस्ट ऑफीस १० किलोमिटर परस चड अंतराचेर आसा.
+गांवांत उपपोस्ट ऑफीस उपलब्ध आसा.
+गांवांत पोस्ट आनीक तार ऑफीस उपलब्ध आसा.
