*Empty MediaWiki Message*

--- a/अडणें.mw
+++ b/अडणें.mw
@@ -203,7 +203,7 @@
 * रान  : २१३.४
 * शेतकामा खातीर ना वापरिल्ली जमीन: ८५
 * ओसाड आनी लागवड ना केल्ली जमीन: ०
-* कुरणे आनी अन्य मळ: ०
+* कुरणे आनी हेर मळ: ०
 * विबिन्न झाडांपेडा, पीकांतर्गत येवपी जमीन: ०
 * लागवडयोग्य पडीक जमीन: ४०१.६
 * कायमस्वरूपी पडीक जमीन: ०
@@ -223,7 +223,9 @@
 
 
 == उत्पादन ==
-अडणें ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): तांदूळ,काजूबियो
+अडणें ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें):
+
+ तांदूळ,काजूबियो
 
 == संदर्भ ==
 
