*Empty MediaWiki Message*

--- a/गिरीं.mw
+++ b/गिरीं.mw
@@ -43,3 +43,4 @@
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (कला आणी शास्त्र) PANAJI (१० किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (कला आणी वाणिज्य) PERNEM RURAL (१८ किमी) हांगां आसा.
 सगळ्यांत लागीं "खाजगी पदवी महाविद्यालय (कला, शास्त्र आणी वाणिज्य)" MAPUSA (४ किमी) हांगां आसा.
+सगळ्यांत लागीं खाजगी पदवी महाविद्यालय- विधी PANAJI (११ किमी) हांगां आसा.
