--- a/भाटी.mw
+++ b/भाटी.mw
@@ -19,6 +19,6 @@
 सगळ्यांत लागीं वैजकी महाविद्यालय बांबोळे १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं वैवस्थापन  संस्था  कुडचड्या-काकोडा १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं पॉलिटेक्निक कुडचड्या-काकोडा १० किलोमिटर परस चड अंतराचेर आसा.
-सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (CURCHOREM-CACORA) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा कुडचड्या-काकोडा १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  (MARGAO) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा (MARGAO) १० किलोमिटर परस चड अंतराचेर आसा.
