*Empty MediaWiki Message*

--- a/गिरीं.mw
+++ b/गिरीं.mw
@@ -44,3 +44,4 @@
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (कला आणी वाणिज्य) PERNEM RURAL (१८ किमी) हांगां आसा.
 सगळ्यांत लागीं "खाजगी पदवी महाविद्यालय (कला, शास्त्र आणी वाणिज्य)" MAPUSA (४ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय- विधी PANAJI (११ किमी) हांगां आसा.
+सगळ्यांत लागीं शासकीय पदवी महाविद्यालय- विद्यापीठ PANAJI (१७ किमी) हांगां आसा.
