--- a/करमळी.mw
+++ b/करमळी.mw
@@ -143,3 +143,16 @@
 २४ वरां वीज पुरवण वेपाराविशी कामाखातीर हिवाळ्यात (ऑक्टोबर-मार्च) दर दीसा उपलब्ध आसा.
 २४ वरां वीज पुरवण सगळ्यांखातीर हुनाळ्यांत (एप्रिल-सप्टेंबर) दर दीसा उपलब्ध आसा.
 २४ वरां वीज पुरवण सगळ्यांखातीर हिवाळ्यात (ऑक्टोबर-मार्च) दर दीसा उपलब्ध आसा.
+== जमिनीचो वापर ==
+करमळे ह्या गावात जमिनीचो वापर सकयलदिल्ल्याप्रमाण जाता (हेक्टर- क्षेत्रफळ):
+* रान  : ०
+* शेतकामा खातीर ना वापरिल्ली जमीन: १३०.०९
+* ओसाड आनी लागवड ना केल्ली जमीन: ०
+* कुरणे आनी अन्य मळ: ०
+* विबिन्न झाडांपेडा, पीकांतर्गत येवपी जमीन: ६.८
+* लागवडयोग्य पडीक जमीन: ४०
+* कायमस्वरूपी पडीक जमीन: ०
+* सद्यस्थितींत पडीक जमीन: ०
+* पिकां सकयली जमीन: ११५७
+* एकूण कोरड व्हांवपी जमीन: १०७८
+* एकूण बागायत जमीन: ७९
