--- a/भाटी.mw
+++ b/भाटी.mw
@@ -20,5 +20,5 @@
 सगळ्यांत लागीं वैवस्थापन  संस्था  कुडचड्या-काकोडा १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं पॉलिटेक्निक कुडचड्या-काकोडा १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा कुडचड्या-काकोडा १० किलोमिटर परस चड अंतराचेर आसा.
-सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  (MARGAO) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  मडगांव १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा (MARGAO) १० किलोमिटर परस चड अंतराचेर आसा.
