--- a/अँग्लो_इंडियन_साहित्य.mw
+++ b/अँग्लो_इंडियन_साहित्य.mw
@@ -19,7 +19,7 @@
 
 अँग्लो-इंडियन साहित्याचो प्रवाह थांबनासतना रुडयार्ड किप्लींग (१८६५-१९३६) आनी ई. एम्. फॉर्स्टर (१८७९-१९७०) हांचे मेरेन चालूच उरलो. ह्या दोगांयचें साहित्य म्हळ्यार अँग्लो-इंडियन साहित्यांतली बऱ्यांतली बरी प्रातिनिधीक अभिव्यक्ती अशें मानतात. ई. एम्. फॉर्स्टर हाची ‘ अ पॅसेज टू इंडिया ’ ही साहित्य कृती म्हळ्यार अँग्लो-इंडियन साहित्याचें बऱ्यांतले बरें उदाहरण आनी आर्विल्या भारताच्या घुसपागोंदळाचें समाजीक, वास्तव चित्रण करपी दर्जेदार कादंबरी अशें जाणकारांचें मत आसा.
 
-स्वतंत्रताये उपरांत काळाचे गरजे प्रमाण अँग्लो-इंडियन साहित्य वाडूंक शकलेंना, तरी पूण [[ब्रिटीश]] काळांतल्या भारताचें चित्रण करपी [[पुस्तक]]ां पेनलस्कॉट आनी एम्. एम्. केय ह्या लेखकांनी बरयल्यांत.
+स्वतंत्रताये उपरांत काळाचे गरजे प्रमाण अँग्लो-इंडियन साहित्य वाडूंक शकलेंना, तरी पूण [[ब्रिटीश]] काळांतल्या भारताचें चित्रण करपी [[पुस्तक]] पेनलस्कॉट आनी एम्. एम्. केय ह्या लेखकांनी बरयल्यांत.
 
 
 [[Category:देवनागरी लिपी]]
