--- a/करमळी.mw
+++ b/करमळी.mw
@@ -156,3 +156,10 @@
 * पिकां सकयली जमीन: ११५७
 * एकूण कोरड व्हांवपी जमीन: १०७८
 * एकूण बागायत जमीन: ७९
+== शिंपणावळ सुविधा ==
+शिंपणावळ करपा खातीर स्रोत अशे आसात (क्षेत्रफळ हेक्टरांनी) :
+* कालवे: ०
+* बांयो / कूप नलिका: ०
+* तळी: ७९
+* ओढे: ०
+* हेर: ०
