--- a/भाटी.mw
+++ b/भाटी.mw
@@ -21,4 +21,4 @@
 सगळ्यांत लागीं पॉलिटेक्निक कुडचड्या-काकोडा १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा कुडचड्या-काकोडा १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  मडगांव १० किलोमिटर परस चड अंतराचेर आसा.
-सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा (MARGAO) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा मडगांव १० किलोमिटर परस चड अंतराचेर आसा.
