--- a/करमळी.mw
+++ b/करमळी.mw
@@ -163,3 +163,13 @@
 * तळी: ७९
 * ओढे: ०
 * हेर: ०
+== उत्पादन ==
+करमळे ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): COCONUTS
+
+
+[[वर्ग:[[उत्तर गोवा]]]]
+[[वर्ग:[[तिसवाडी]]]]
+[[वर्ग:[[उत्तर गोवा जिल्ल्यांतले गांव]]]]
+
+
+== संदर्भ ==
