*Empty MediaWiki Message*

--- a/गिरीं.mw
+++ b/गिरीं.mw
@@ -46,3 +46,4 @@
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय- विधी PANAJI (११ किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय पदवी महाविद्यालय- विद्यापीठ PANAJI (१७ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय - हेर MAPUSA (३ किमी) हांगां आसा.
+सगळ्यांत लागीं शासकीय वैजकी महाविद्यालय BAMBOLIM C T (१५ किमी) हांगां आसा.
