--- a/गिरीं.mw
+++ b/गिरीं.mw
@@ -48,3 +48,4 @@
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय - हेर MAPUSA (३ किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय वैजकी महाविद्यालय BAMBOLIM C T (१५ किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय अभियांत्रिकी महाविद्यालय BANDORA C T (३९ किमी) हांगां आसा.
+सगळ्यांत लागीं शासकीय वैवस्थापन संस्था  PENHA DE FRANCA (CT) (५ किमी) हांगां आसा.
