--- a/गिरीं.mw
+++ b/गिरीं.mw
@@ -50,3 +50,4 @@
 सगळ्यांत लागीं शासकीय अभियांत्रिकी महाविद्यालय BANDORA C T (३९ किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय वैवस्थापन संस्था  PENHA DE FRANCA (CT) (५ किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय पॉलिटेक्निक PANAJI (१० किमी) हांगां आसा.
+सगळ्यांत लागीं शासकीय वेवसायीक प्रशिक्षण शाळा MAPUSA (३ किमी) हांगां आसा.
