*Empty MediaWiki Message*

--- a/अकाली.mw
+++ b/अकाली.mw
@@ -2,7 +2,7 @@
 
 हीच परंपरा फुडें चलोवन शिखांचो सवो गुरू हरगोविंद हाणें अकाली पंथाची स्थापना केली. ताणें अमृतसरच्या भांगरा मंदिरा मुखार अकालतख्त स्थापन केलें. ताका ‘अकाल बुंग’ अशें नांव आसा. ‘बुंग’ म्हळ्यार जाचेर घुमट आसा अशें एक महानभवन. ह्या अकालबुंगांत अकाली लोकांच्यो गुप्त बसका जावपाक लागल्यो. तातूंत जे थाराव जाताले तांकां गुरूमतां म्हळ्यार गुरूचो ‘आदेश’ अशें मानताले. धर्मीक सुवाळ्याच्या स्वरुपांत अकाली दलाचीं थंय खूब संमेनलना भरतालीं. पूण तांचो मुखेल उद्देश मोगलांच्या अत्याचारां पसून लोकांचें रक्षण कशें करप, होच आसतालो. ह्याच कारणाक लागून अकाली चळवळीक राजनितीक वळण लागलें. जो नामवाणीचो प्रेमी, त्यागी आनी विरक्त, अशा मनशाकूच अकालबुंगाचो वांगडी जावपाचो अधिकार आशिल्लो. अकाली लोक शूर, निर्भय आनी स्वतंत्र आसताले. भुरगीं, जाण्टे, दुबळे आनी बायलो हांची राखण करप होच आपलो धर्म अशें ते समजताले.
 
-1699 त गुरू गोविंदसिंह हाणें ‘खालसा पंथ’ स्थापन केलो. फकत अकाली लोक त्या पंथाक अनुयायी आशिल्ले. औरंगजेबाच्या अत्याचारांक तोंड दिवपाक अकाली लोक सेना दलाच्या स्वरुपांत संघटीत जाले. निळें वस्त्र आनी पांच ककारः- कच्छ, कडा, कृपाण, केश, कंघा धारण करपाची गुरून तांकां आज्ञा केली. तांच्या लश्करी बाण्याक लागून तांकां ‘निहंग’ अशेंय म्हणटाले. ‘निहंग’ ह्या फारसी शब्दाचो अर्थ निर्भय असो आसा. शिखांच्या इतिहासांत अकालींनी केल्ली कामगिरी म्हत्वाची. निहंग ब्रह्मचारी वृत्तींन रावताले. ते दलित-दुबळ्यांची राखण करताले आनी शीख धर्माचो प्रचारूय करताले. ते सदांच भोंवडेर आसताले. तांची ही पक्षी वृत्ती पळोवन कांय लोक तांकां ‘विहंग’(सुकणें) अशेंय म्हणटाले. अफगाणांच्या घुरयांक तोंड दिवप आनी अत्याचारी टोळ्यां पसून हिंदू बायलांची राखण करप हे तांचे दिसपट्टे कार्य जाल्लें.
+1699 त गुरू गोविंदसिंह हाणें ‘खालसा पंथ’ स्थापन केलो. फकत अकाली लोक त्या पंथाक अनुयायी आशिल्ले. औरंगजेबाच्या अत्याचारांक तोंड दिवपाक अकाली लोक सेना दलाच्या स्वरुपांत संघटीत जाले. निळें वस्त्र आनी पांच ककारः- कच्छ, कडा, कृपाण, केश, कंछा धारण करपाची गुरून तांकां आज्ञा केली. तांच्या लश्करी बाण्याक लागून तांकां ‘निहंग’ अशेंय म्हणटाले. ‘निहंग’ ह्या फारसी शब्दाचो अर्थ निर्भय असो आसा. शिखांच्या इतिहासांत अकालींनी केल्ली कामगिरी म्हत्वाची. निहंग ब्रह्मचारी वृत्तींन रावताले. ते दलित-दुबळ्यांची राखण करताले आनी शीख धर्माचो प्रचारूय करताले. ते सदांच भोंवडेर आसताले. तांची ही पक्षी वृत्ती पळोवन कांय लोक तांकां ‘विहंग’(सुकणें) अशेंय म्हणटाले. अफगाणांच्या घुरयांक तोंड दिवप आनी अत्याचारी टोळ्यां पसून हिंदू बायलांची राखण करप हे तांचे दिसपट्टे कार्य जाल्लें.
 
 महाराजा रणजीतसिंह (इ.स. 1780 - 1839) हाच्या काळांत अकाली सेनादल भरभराटीच्या तेंगशेर पावलें. अकाली सैन्याच्या बळाचेरूच मुलतान, काश्मीर, अटक, नौशेरा, जमशेद, अफगाणीस्तान हांगा रणजितसिंहान आपलो राज्यविस्तार केलो. त्या वेळार फुलसिंग हो अकालींचो फुडारी आशिल्लो. इ.स. 1809 त अमृतसर हांगा मेटकाफ हांच्या सैन्याचेर तो आपल्या जला सयत तुटून पडलो आनी ताका लागून नामनेक पावलो. इ.स. 1818 त वेढ्यांत सांपडिल्लो मुलतानचो किल्लो ताणें मोटो पराक्रम करून सर केलो. ताचो हो पराक्रम पळोवन रणजितसिंहान ताका सिंध देगणांत मुखेल अधिकारी म्हूण नेमलो. फुडें 1823 सालांत तेरीच्या लडायेंत हाणें आपल्या दला सयत युसुफझईचेर घुरी घाली. युसुफझईचो पराभव जालो खरो पूण फुलसिंगाक ह्या झुजांत मरण आयलें.
 
