*Empty MediaWiki Message*

--- a/गिरीं.mw
+++ b/गिरीं.mw
@@ -51,3 +51,4 @@
 सगळ्यांत लागीं शासकीय वैवस्थापन संस्था  PENHA DE FRANCA (CT) (५ किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय पॉलिटेक्निक PANAJI (१० किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय वेवसायीक प्रशिक्षण शाळा MAPUSA (३ किमी) हांगां आसा.
+सगळ्यांत लागीं शासकीय अनौपचारीक प्रशिक्षणकेंद्र  MAPUSA (३ किमी) हांगां आसा.
