--- a/भाटी.mw
+++ b/भाटी.mw
@@ -22,3 +22,16 @@
 सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा कुडचड्या-काकोडा १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  मडगांव १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा मडगांव १० किलोमिटर परस चड अंतराचेर आसा.
+
+== वैजकी सुविधा (शासकीय) ==
+
+सगळ्यांत लागीं समाजिक आरोग्य केंद्र १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं प्राथमिक आरोग्य केंद्र १० किलोमिटर परस चड अंतराचेर आसा.
+﻿गांवांत १ प्राथमिक आरोग्य उपकेंद्र  आसा.
+सगळ्यांत लागीं प्रसूति आनी बालकल्याण केंद्र १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं क्षयरोग उपचार केंद्र  १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं अ‍ॅलोपॅथी रुग्णालय १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं पर्यायी वैजकी रुग्णालय १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं दवाखानो ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+﻿गांवांत १ पशुवैजकी रुग्णालय आसा.
+गांवांत १ कुटुंब कल्याणकेंद्र आसा.
