--- a/करमळी-_बुद्रुक.mw
+++ b/करमळी-_बुद्रुक.mw
@@ -128,3 +128,5 @@
 गांवांत चित्रपटगृह / व्हिडिओ केंद्र उपलब्ध ना.सगळ्यांत लागीं चित्रपटगृह / व्हिडिओ केंद्र ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 गांवांत सार्वजनिक पुस्तकालय उपलब्ध ना.सगळ्यांत लागीं सार्वजनिक पुस्तकालय ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 गांवांत सार्वजनिक वाचनालय उपलब्ध आसा.
+गांवांत खबरेपत्र पुरवण उपलब्ध आसा.
+गांवांत विधानसभा मतदान केंद्र उपलब्ध ना.सगळ्यांत लागीं विधानसभा मतदान केंद्र ५ ते १० किलोमिटराच्या अंतराचेर आसा.
