--- a/गिरीं.mw
+++ b/गिरीं.mw
@@ -52,3 +52,4 @@
 सगळ्यांत लागीं शासकीय पॉलिटेक्निक PANAJI (१० किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय वेवसायीक प्रशिक्षण शाळा MAPUSA (३ किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय अनौपचारीक प्रशिक्षणकेंद्र  MAPUSA (३ किमी) हांगां आसा.
+सगळ्यांत लागीं शासकीय अपंगां खातीर खाशेली शाळा PENHA DE FRANCA C T (६ किमी) हांगां आसा.
