--- a/करमळी-_बुद्रुक.mw
+++ b/करमळी-_बुद्रुक.mw
@@ -130,3 +130,4 @@
 गांवांत सार्वजनिक वाचनालय उपलब्ध आसा.
 गांवांत खबरेपत्र पुरवण उपलब्ध आसा.
 गांवांत विधानसभा मतदान केंद्र उपलब्ध ना.सगळ्यांत लागीं विधानसभा मतदान केंद्र ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+गांवांत जन्म मृत्यु नोंदणी केंद्र उपलब्ध आसा.
