*Empty MediaWiki Message*

--- a/गिरीं.mw
+++ b/गिरीं.mw
@@ -53,3 +53,6 @@
 सगळ्यांत लागीं शासकीय वेवसायीक प्रशिक्षण शाळा MAPUSA (३ किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय अनौपचारीक प्रशिक्षणकेंद्र  MAPUSA (३ किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय अपंगां खातीर खाशेली शाळा PENHA DE FRANCA C T (६ किमी) हांगां आसा.
+
+== सुविधा ==
+  सगळ्यांत लागीं खाजगी अऩाथाश्रम PANAJI (१२ किमी) हांगां आसा.
