--- a/कासणें.mw
+++ b/कासणें.mw
@@ -25,3 +25,7 @@
 
 == कासणें (६२६६४१) ==
 कासणें हे उत्तर गोवा जिल्ह्यातल्या पेडणें तालुक्यातील १२६.४६ हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या गावात ७७ कुटुंबाचे व पुराय ३१९ लोकसंख्या आसा. हांगा लागीचे शार PERNEM ६ किलोमीटर अंतरावर आसा. हांगा १५९ दादले आनीक १६० बायला आसा. हांगा अनुसूचित जातीचे लोक ८१ आसून अनुसूचित जमातीचे ० लोक आसात. ह्या गावाचो जनगणनेतलो स्थल निर्देशांक ६२६६४१  <ref>http://www.censusindia.gov.in/2011census/dchb/DCHB.html</ref> आसा.
+== साक्षरताय ==  
+* एकूण साक्षर लोकसंख्या: २५६
+* साक्षर पुरुश लोकसंख्या: १३६ (८५.५३%)
+* साक्षर स्त्री लोकसंख्या: १२० (७५.०%)
