--- a/भाटी.mw
+++ b/भाटी.mw
@@ -32,5 +32,16 @@
 सगळ्यांत लागीं क्षयरोग उपचार केंद्र  १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं अ‍ॅलोपॅथी रुग्णालय १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं पर्यायी वैजकी रुग्णालय १० किलोमिटर परस चड अंतराचेर आसा.
-सगळ्यांत लागीं दवाखानो ५ ते १० किलोमिटराच्या अंतराचेर आसा.
-﻿गांवांत १ पशुवैजकी रुग्णालय आसा. गांवांत १ कुटुंब कल्याणकेंद्र आसा. गांवांत १ वखदालय आसा.
+सगळ्यांत लागीं दवाखानो ५ ते १० किलोमिटराच्या अंतराचेर आसा. गांवांत १ पशुवैजकी रुग्णालय आसा. गांवांत १ कुटुंब कल्याणकेंद्र आसा. गांवांत १ वखदालय आसा.
+
+== पिवपाचे उदक ==
+गांवांत शुद्धीकरण केल्लें नळाचें उदक पुरवण आसा.
+गांवांत शुद्धीकरण करूंक नशिल्लें उदक पुरवण आसा.
+गांवांत धापिल्लें बांयचें उदक पुरवण ना.
+गांवांत उघड्या बांयचें उदक पुरवण आसा.
+गांवांत हॅन्डपंपचें उदक पुरवण ना.
+गांवांत ट्यूबवेलच्या/बोअरवेलाचो उदक पुरवण ना.
+गांवांत झरीचें उदक पुरवण आसा.
+गांवांत न्हय/खाजनाचें उदक पुरवण ना.
+गांवांत तळी/कोंड उदक पुरवण ना.
+गांवांत अन्य पद्धतीचे उदक पुरवण ना.
