--- a/गिरीं.mw
+++ b/गिरीं.mw
@@ -56,3 +56,5 @@
 
 == सुविधा ==
   सगळ्यांत लागीं खाजगी अऩाथाश्रम PANAJI (१२ किमी) हांगां आसा.
+सगळ्यांत लागीं नोकरी करपी स्त्रियांचें सरकारी निवास (हॉस्टेल) PENHA DE FRANCA C T (५ किमी) हांगां आसा.
+ ﻿शारांत १ खाजगी वृद्धाश्रम आसा.
