--- a/कासणें.mw
+++ b/कासणें.mw
@@ -29,3 +29,11 @@
 * एकूण साक्षर लोकसंख्या: २५६
 * साक्षर पुरुश लोकसंख्या: १३६ (८५.५३%)
 * साक्षर स्त्री लोकसंख्या: १२० (७५.०%)
+== शैक्षणिक सुविधा ==  
+ सगळ्यांत लागीं पूर्व-प्राथमिक शाळा (PERNEM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+﻿गांवांत १ शासकीय प्राथमिक शाळा आसा. 
+ सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (PERNEM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+ सगळ्यांत लागीं माध्यमिक शाळा (PERNEM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+ सगळ्यांत लागीं उच्च माध्यमिक शाळा (PERNEM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+ सगळ्यांत लागीं पदवी महाविद्यालय (PERNEM RURAL) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+ सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (BANDORA C T) १० किलोमिटर परस चड अंतराचेर आसा.
