*Empty MediaWiki Message*

--- a/अँटिगा_आणि_बार्बुडा.mw
+++ b/अँटिगा_आणि_बार्बुडा.mw
@@ -3,7 +3,7 @@
 
 {{double image|right|Flag of Antigua and Barbuda.svg|180|Coat of arms of Antigua and Barbuda.svg|120|{{SUBPAGENAME}} च्या ध्वज|{{SUBPAGENAME}} च्या चिन्ह}}
 [[File:Antigua and Barbuda map.png|thumb|right|200px|{{SUBPAGENAME}}]]
-'''{{SUBPAGENAME}}''', उत्तर अमेरिका च्या देश आसा। त्याच्या राजधानी [[सेंट जॉन]] नगर आसा।<ref>http://www.bbc.com/news/world-latin-america-18706079</ref><ref>https://www.cia.gov/library/publications/the-world-factbook/geos/ac.html</ref>
+'''{{SUBPAGENAME}}''', उत्तर अमेरिका च्या देश आसा। ताची राजधानी [[सेंट जॉन]] नगर आसा।<ref>http://www.bbc.com/news/world-latin-america-18706079</ref><ref>https://www.cia.gov/library/publications/the-world-factbook/geos/ac.html</ref>
 
 ==संदर्भ==
 <references/>
