--- a/कासणें.mw
+++ b/कासणें.mw
@@ -37,3 +37,9 @@
  सगळ्यांत लागीं उच्च माध्यमिक शाळा (PERNEM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
  सगळ्यांत लागीं पदवी महाविद्यालय (PERNEM RURAL) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
  सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (BANDORA C T) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM C T) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं वैवस्थापन  संस्था  (PENHA-DE-FRANCA C T) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं पॉलिटेक्निक (PANAJI) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (TUEM) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  (PERNEM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+ सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा (PENHA-DE-FRANCA CT) १० किलोमिटर परस चड अंतराचेर आसा.
