--- a/गिरीं.mw
+++ b/गिरीं.mw
@@ -59,3 +59,4 @@
 सगळ्यांत लागीं नोकरी करपी स्त्रियांचें सरकारी निवास (हॉस्टेल) PENHA DE FRANCA C T (५ किमी) हांगां आसा.
  ﻿शारांत १ खाजगी वृद्धाश्रम आसा.
 सगळ्यांत लागीं शासकीय खेळांगण MAPUSA (५ किमी) हांगां आसा.
+सगळ्यांत लागीं खाजगी चित्रपटगृह MAPUSA (३ किमी) हांगां आसा.
