*Empty MediaWiki Message*

--- a/गिरीं.mw
+++ b/गिरीं.mw
@@ -60,3 +60,4 @@
  ﻿शारांत १ खाजगी वृद्धाश्रम आसा.
 सगळ्यांत लागीं शासकीय खेळांगण MAPUSA (५ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी चित्रपटगृह MAPUSA (३ किमी) हांगां आसा.
+सगळ्यांत लागीं खाजगी सभाघर MAPUSA (६ किमी) हांगां आसा.
