--- a/करमळी-_बुद्रुक.mw
+++ b/करमळी-_बुद्रुक.mw
@@ -145,3 +145,5 @@
 == जमिनीचो वापर ==
 करमळी- बुद्रुक ह्या गावात जमिनीचो वापर सकयलदिल्ल्याप्रमाण जाता (हेक्टर- क्षेत्रफळ):
 * रान  : ३१४.४५
+* शेतकामा खातीर ना वापरिल्ली जमीन: ०
+* ओसाड आनी लागवड ना केल्ली जमीन: ८.६
