--- a/करमळी-_बुद्रुक.mw
+++ b/करमळी-_बुद्रुक.mw
@@ -149,3 +149,5 @@
 * ओसाड आनी लागवड ना केल्ली जमीन: ८.६
 * कुरणे आनी अन्य मळ: ०
 * विबिन्न झाडांपेडा, पीकांतर्गत येवपी जमीन: ०
+* लागवडयोग्य पडीक जमीन: १०.६८
+* कायमस्वरूपी पडीक जमीन: ०
