--- a/कासणें.mw
+++ b/कासणें.mw
@@ -57,3 +57,10 @@
 सगळ्यांत लागीं कुटुंब कल्याणकेंद्र ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 == वैजकी सुविधा (अशासकीय) ==
 == पिवपाचे उदक ==
+गांवांत शुद्धीकरण केल्लें नळाचें उदक पुरवण आसा.
+गांवांत शुद्धीकरण करूंक नशिल्लें उदक पुरवण ना.
+गांवांत धापिल्लें बांयचें उदक पुरवण ना.
+गांवांत उघड्या बांयचें उदक पुरवण आसा.
+गांवांत हॅन्डपंपचें उदक पुरवण ना.
+गांवांत ट्यूबवेलच्या/बोअरवेलाचो उदक पुरवण ना.
+गांवांत झरीचें उदक पुरवण आसा.
