--- a/अकाली.mw
+++ b/अकाली.mw
@@ -4,7 +4,7 @@
 
 1699 त गुरू गोविंदसिंह हाणें ‘खालसा पंथ’ स्थापन केलो. फकत अकाली लोक त्या पंथाक अनुयायी आशिल्ले. औरंगजेबाच्या अत्याचारांक तोंड दिवपाक अकाली लोक सेना दलाच्या स्वरुपांत संघटीत जाले. निळें वस्त्र आनी पांच ककारः- कच्छ, कडा, कृपाण, केश, कंछा धारण करपाची गुरून तांकां आज्ञा केली. तांच्या लश्करी बाण्याक लागून तांकां ‘निहंग’ अशेंय म्हणटाले. ‘निहंग’ ह्या फारसी शब्दाचो अर्थ निर्भय असो आसा. शिखांच्या इतिहासांत अकालींनी केल्ली कामगिरी म्हत्वाची. निहंग ब्रह्मचारी वृत्तींन रावताले. ते दलित-दुबळ्यांची राखण करताले आनी शीख धर्माचो प्रचारूय करताले. ते सदांच भोंवडेर आसताले. तांची ही पक्षी वृत्ती पळोवन कांय लोक तांकां ‘विहंग’(सुकणें) अशेंय म्हणटाले. अफगाणांच्या घुरयांक तोंड दिवप आनी अत्याचारी टोळ्यां पसून हिंदू बायलांची राखण करप हें तांचे दिसपट्टे कार्य जाल्लें.
 
-महाराजा रणजीतसिंह (इ.स. 1780 - 1839) हाच्या काळांत अकाली सेनादल भरभराटीच्या तेंगशेर पावलें. अकाली सैन्याच्या बळाचेरूच मुलतान, काश्मीर, अटक, नौशेरा, जमशेद, अफगाणीस्तान हांगा रणजितसिंहान आपलो राज्यविस्तार केलो. त्या वेळार फुलसिंग हो अकालींचो फुडारी आशिल्लो. इ.स. 1809 त अमृतसर हांगा मेटकाफ हांच्या सैन्याचेर तो आपल्या जला सयत तुटून पडलो आनी ताका लागून नामनेक पावलो. इ.स. 1818 त वेढ्यांत सांपडिल्लो मुलतानचो किल्लो ताणें मोटो पराक्रम करून सर केलो. ताचो हो पराक्रम पळोवन रणजितसिंहान ताका सिंध देगणांत मुखेल अधिकारी म्हूण नेमलो. फुडें 1823 सालांत तेरीच्या लडायेंत हाणें आपल्या दला सयत युसुफझईचेर घुरी घाली. युसुफझईचो पराभव जालो खरो पूण फुलसिंगाक ह्या झुजांत मरण आयलें.
+महाराजा रणजीतसिंह (इ.स. 1780 - 1839) हाच्या काळांत अकाली सेनादल भरभराटीच्या तेंगशेर पावलें. अकाली सैन्याच्या बळाचेरूच मुलतान, काश्मिर, अटक, नौशेरा, जमशेद, अफगाणीस्तान हांगा रणजितसिंहान आपलो राज्यविस्तार केलो. त्या वेळार फुलसिंग हो अकालींचो फुडारी आशिल्लो. इ.स. 1809 त अमृतसर हांगा मेटकाफ हांच्या सैन्याचेर तो आपल्या जला सयत तुटून पडलो आनी ताका लागून नामनेक पावलो. इ.स. 1818 त वेढ्यांत सांपडिल्लो मुलतानचो किल्लो ताणें मोटो पराक्रम करून सर केलो. ताचो हो पराक्रम पळोवन रणजितसिंहान ताका सिंध देगणांत मुखेल अधिकारी म्हूण नेमलो. फुडें 1823 सालांत तेरीच्या लडायेंत हाणें आपल्या दला सयत युसुफझईचेर घुरी घाली. युसुफझईचो पराभव जालो खरो पूण फुलसिंगाक ह्या झुजांत मरण आयलें.
 
 शीख गुरूंनी आपल्या धर्माच्या प्रसारा खातीर जायतीं गुरूद्वारां स्थापन केल्लीं. तांच्या चरितार्था खातीर रणजितसिंहान व्हडल्यो- व्हडल्यो जहागिऱ्यो लावन दिल्ल्यो. इंग्लेज राद्यांत ह्या जहागिऱ्यांचे अधिकार जांच्या हातांत आशिल्ले, तातूंतले चडशे महंत फुडें वायट कर्तुपां करपाक लागले. ताका लागून गुरूद्वारांचो उद्धार करपा खातीर 1920 सालांत अकाली तरनाट्यांनी आपलें नवें सेना ददल संघटित केलें. तांणी मठांतसून वायट करण्यो करपी महंतांक धांवडायले आनी मठ आपल्या ताब्यांत घेतलो.
 
