*Empty MediaWiki Message*

--- a/अर्थशास्त्र.mw
+++ b/अर्थशास्त्र.mw
@@ -48,12 +48,12 @@
 भारतीय विचारवंतांनी भारतीय प्रस्नांच्या संदर्भांत अर्थशास्त्राचो अभ्यास आनी वापर करूंक जाय, अशें मत न्यायमूर्ति महादेव गोविंद रानडे हाणें मुखार हाडलें. रानडेचो शिष्य गोपाळ कृष्ण गोखले हाणें आपल्या अर्थीक प्रस्नांविशींच्या विवेचनांत रानडेचोच विचार फुडें व्हेलो. भारतीय परिस्थितचें संशोधन करपी अभ्यासकांची परंपरां ह्याच भारतीय अर्थशास्त्राचो अभ्यास करीत आशिल्ली. स्वतंत्रताये पयलीं आनी उपरांत भारतीय अर्थशास्त्रज्ञांनी ह्या विशयाचेर भरपूर बरपावळ केली. अर्थशास्त्राचो अभ्यास करचे खातीर खास संस्थांची निर्मणी जाली; देशांतल्या विंगड विंगड विश्वविद्यालयांतल्यान ह्या विशयाचो अभ्यास करचे खातीर संशोधनाचें काम सुरू जालें.
 
 भारतांत अर्थशास्त्राचेर उजवाडायल्लीं बरींच इंग्लीश नेमालीं आसात. तातूंतली म्हत्वाचीं म्हळ्यार 
-इंडियन इकनॉमिक जर्नल
-इंडियन इकनॉमिक रिव्ह्यू, 
-इंडियन जर्नल ऑफ इकनॉमिक्स,
- इकनॉमिक स्टडीज, 
-इकनॉमिक अँड पोलीटिकल वीकली, कॉमर्स,
- इंडियन जर्नल ऑफ अॅग्रिकल्चरल इकनॉमिक्स,
+'''इंडियन इकनॉमिक जर्नल'''
+'''इंडियन इकनॉमिक रिव्ह्यू''' 
+'''इंडियन जर्नल ऑफ इकनॉमिक्स''' 
+ '''इकनॉमिक स्टडीज''' 
+'''इकनॉमिक अँड पोलीटिकल वीकली, कॉमर्स'''
+ '''इंडियन जर्नल ऑफ अॅग्रिकल्चरल इकनॉमिक्स'''
  अर्थविज्ञान, 
 इस्टर्न इकनॉमिक्स, 
 कॅपिटल
