--- a/भाटी.mw
+++ b/भाटी.mw
@@ -118,3 +118,17 @@
 २० वरां वीज पुरवण वेपाराविशी कामाखातीर हिवाळ्यात (ऑक्टोबर-मार्च) दर दीसा उपलब्ध आसा.
 १६ वरां वीज पुरवण सगळ्यांखातीर हुनाळ्यांत (एप्रिल-सप्टेंबर) दर दीसा उपलब्ध आसा.
 २० वरां वीज पुरवण सगळ्यांखातीर हिवाळ्यात (ऑक्टोबर-मार्च) दर दीसा उपलब्ध आसा.
+
+== जमिनीचो वापर ==
+भाटी ह्या गावात जमिनीचो वापर सकयलदिल्ल्याप्रमाण जाता (हेक्टर- क्षेत्रफळ):
+* रान  : २०८३
+* शेतकामा खातीर ना वापरिल्ली जमीन: १६९.६
+* ओसाड आनी लागवड ना केल्ली जमीन: ०
+* कुरणे आनी अन्य मळ: ०
+* विबिन्न झाडांपेडा, पीकांतर्गत येवपी जमीन: २६३.४
+* लागवडयोग्य पडीक जमीन: ०
+* कायमस्वरूपी पडीक जमीन: ०
+* सद्यस्थितींत पडीक जमीन: ०
+* पिकां सकयली जमीन: ४८०
+* एकूण कोरड व्हांवपी जमीन: ४४०
+* एकूण बागायत जमीन: ४०
