--- a/गिरीं.mw
+++ b/गिरीं.mw
@@ -62,3 +62,6 @@
 सगळ्यांत लागीं खाजगी चित्रपटगृह MAPUSA (३ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी सभाघर MAPUSA (६ किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय भौशीक ग्रंथालय  MAPUSA (३ किमी) हांगां आसा.
+
+== उत्पादन ==
+गिरीं ह्या शारांत मुखा वयल्या वस्तूंचें उत्पादन जाता ( म्हत्वाच्या देंवत्या अनुक्रमान): ICE FACTORY,COCONUT PRODUCTS,WOODEN FURNITURE
