--- a/भाटी.mw
+++ b/भाटी.mw
@@ -132,3 +132,11 @@
 * पिकां सकयली जमीन: ४८०
 * एकूण कोरड व्हांवपी जमीन: ४४०
 * एकूण बागायत जमीन: ४०
+
+== शिंपणावळ सुविधा ==
+शिंपणावळ करपा खातीर स्रोत अशे आसात (क्षेत्रफळ हेक्टरांनी) :
+* कालवे: ०
+* बांयो / कूप नलिका: ८
+* तळी: ०
+* ओढे: ०
+* हेर: ३२
