--- a/कासारवर्णे.mw
+++ b/कासारवर्णे.mw
@@ -161,3 +161,5 @@
 == जमिनीचो वापर ==
 कासारवर्णें ह्या गावात जमिनीचो वापर सकयलदिल्ल्याप्रमाण जाता (हेक्टर- क्षेत्रफळ):
 * रान  : २१०.९१
+* शेतकामा खातीर ना वापरिल्ली जमीन: १७०.६
+* ओसाड आनी लागवड ना केल्ली जमीन: ०
