--- a/भाटी.mw
+++ b/भाटी.mw
@@ -140,3 +140,6 @@
 * तळी: ०
 * ओढे: ०
 * हेर: ३२
+
+== उत्पादन ==
+भाटी ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): PADDY,SUGARCANE,COCONUTS
