--- a/करमळी-_बुद्रुक.mw
+++ b/करमळी-_बुद्रुक.mw
@@ -165,3 +165,4 @@
 * हेर: ५.२८
 
 == उत्पादन ==
+करमळी- बुद्रुक ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): CASHEW NUTS,COUNTRY LIQUOR,WOODEN FURNITURE
