--- a/शिरोली.mw
+++ b/शिरोली.mw
@@ -137,3 +137,7 @@
 २४ वरां वीज पुरवण सगळ्यांखातीर हिवाळ्यात (ऑक्टोबर-मार्च) दर दीसा उपलब्ध आसा.
 
 == जमिनीचो वापर ==
+शिरोली ह्या गावात जमिनीचो वापर सकयलदिल्ल्याप्रमाण जाता (हेक्टर- क्षेत्रफळ):
+* रान  : ११७.५
+* शेतकामा खातीर ना वापरिल्ली जमीन: ६.३९
+* ओसाड आनी लागवड ना केल्ली जमीन: ०
