--- a/कासारवर्णे.mw
+++ b/कासारवर्णे.mw
@@ -171,3 +171,11 @@
 * पिकां सकयली जमीन: ५२९.६७
 * एकूण कोरड व्हांवपी जमीन: ५०९.२३
 * एकूण बागायत जमीन: २०.४४
+
+== शिंपणावळ सुविधा ==
+शिंपणावळ करपा खातीर स्रोत अशे आसात (क्षेत्रफळ हेक्टरांनी) :
+* कालवे: ०
+* बांयो / कूप नलिका: ०
+* तळी: ०
+* ओढे: ०
+* हेर: २०.४४
