--- a/करमळी-_बुद्रुक.mw
+++ b/करमळी-_बुद्रुक.mw
@@ -169,6 +169,7 @@
 
 == संदर्भ ==
 
-[[वर्ग:[[उत्तर गोवा]]]]
-[[वर्ग:[[सत्तरी]]]]
-[[वर्ग:[[उत्तर गोवा जिल्ल्यांतले गांव]]]]
+[[Category:devanagari]]	
+[[Category:गोंय़]]
+[[Category:उत्तर गोंय]]
+[[Category:गोंयचीं शारां आनी जागे]]
