--- a/शिरोली.mw
+++ b/शिरोली.mw
@@ -145,3 +145,7 @@
 * विबिन्न झाडांपेडा, पीकांतर्गत येवपी जमीन: ०
 * लागवडयोग्य पडीक जमीन: २.७८
 * कायमस्वरूपी पडीक जमीन: ८.१३
+* सद्यस्थितींत पडीक जमीन: ४
+* पिकां सकयली जमीन: २१५
+* एकूण कोरड व्हांवपी जमीन: ८०
+* एकूण बागायत जमीन: १३५
