--- a/शिरोली.mw
+++ b/शिरोली.mw
@@ -149,3 +149,10 @@
 * पिकां सकयली जमीन: २१५
 * एकूण कोरड व्हांवपी जमीन: ८०
 * एकूण बागायत जमीन: १३५
+== शिंपणावळ सुविधा ==
+शिंपणावळ करपा खातीर स्रोत अशे आसात (क्षेत्रफळ हेक्टरांनी) :
+* कालवे: ८५
+* बांयो / कूप नलिका: ५०
+* तळी: ०
+* ओढे: ०
+* हेर: ०
