--- a/शिरोली.mw
+++ b/शिरोली.mw
@@ -156,3 +156,5 @@
 * तळी: ०
 * ओढे: ०
 * हेर: ०
+== उत्पादन ==
+शिरोली ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): RICE,COUNTRY LIQUOR,CLAYWORK,RAGI,CARPENTRY,SUGARCANE,PAINTINGS
