*Empty MediaWiki Message*

--- a/गोवा-व्हेला.mw
+++ b/गोवा-व्हेला.mw
@@ -48,7 +48,7 @@
 | footnotes              = 
 }}
 == गोवा-व्हेला (६२६७३४) ==
-गोवा-व्हेला हें उत्तर गोवा जिल्ल्यांतल्या तिसवाडी तालुक्यांतलें १०.१ चौ. किमी. क्षेत्राचें शार आसून २०११ चे जनगणने प्रमाण ह्या शारांत १०५५ कुटुंबां वा वट्ट ४३२२ लोकसंख्या आसा. जिल्लो मुख्यालय, PANAJI हांगां ९ किलोमीटर अंतराचेर आसा. राज्याची राजधानी PANAJI हांगां ९ किलोमीटर अंतराचेर आसा.   हातूंत २१२९ दादले आनी २१९३ बांयलां आसात. हातूंत अनुसुचीत जातीचे लोक २० आसून अनुसुचीत जमातीचे ११६ लोक आसात. ह्या गांवचो जनगणनेतचो स्थळ निर्देशांक ६२६७३४  <ref>http://www.censusindia.gov.in/2011census/dchb/DCHB.html</ref> आहे.
+गोवा-व्हेला हें उत्तर गोवा जिल्ल्यांतल्या तिसवाडी तालुक्यांतलें १०.१ चौ. किमी. क्षेत्राचें शार आसून २०११ चे जनगणने प्रमाण ह्या शारांत १०५५ कुटुंबां वा वट्ट ४३२२ लोकसंख्या आसा. जिल्लो मुख्यालय,पणजी हांगां ९ किलोमीटर अंतराचेर आसा. राज्याची राजधानी पणजी हांगां ९ किलोमीटर अंतराचेर आसा.   हातूंत २१२९ दादले आनी २१९३ बांयलां आसात. हातूंत अनुसुचीत जातीचे लोक २० आसून अनुसुचीत जमातीचे ११६ लोक आसात. ह्या गांवचो जनगणनेतचो स्थळ निर्देशांक ६२६७३४  <ref>http://www.censusindia.gov.in/2011census/dchb/DCHB.html</ref> आहे.
 लोकसंख्योप्रमाणे शाराचो दर्जो VI (लोकसंख्या_एकूण < ५,०००).
 शाराची नागरी स्थीती आसा. 'सर्वेक्षण शार'.
 १  लाखां परस चड लोकसंख्या आशिल्लें सगळ्यांत लागींचें BELGAUM हें शार १७० किमी अंतराचेर आसा. ५  लाखां परस चड लोकसंख्या आशिल्लें सगळ्यांत लागींचें PUNE हें शार ४८८ किमी अंतराचेर आसा. रेल्व स्टेशन १६ किमी अंतराचेर CARAMBOLIM CT हांगां आसा.
@@ -63,7 +63,7 @@
 == नितळसाण आनी पिवपाचें उदक ==  
 शारांत उकती गटारवेवस्था आसा.
 ल्हान धरणांतल्यान उदकापुरवण जाता. शाराक शुध्दीकरण केल्ल्या नळाच्या उदकाची पुरवण जाता. उदका पुरवणेची तांक 800 किलो लिटर आसा.
-सगळ्यांत लागीं आग पालोवपाची सुविधा PANAJI (९ किमी) हांगां आसा.
+सगळ्यांत लागीं आग पालोवपाची सुविधा पणजी (९ किमी) हांगां आसा.
 == वैजकी सुविधा (शासकीय) ==
 सगळ्यांत लागीं अ‍ॅलोपॅथी रुग्णालय ७ किमी हांगां आसा.
 सगळ्यांत लागीं पर्यायी वैजकी रुग्णालय ५२ किमी हांगां आसा.
