--- a/शिरोली.mw
+++ b/शिरोली.mw
@@ -163,4 +163,9 @@
 [[वर्ग:[[उत्तर गोवा जिल्ल्यांतले गांव]]]]
 
 
+[[Category:devanagari]]	
+[[Category:गोंय़]]
+[[Category:उत्तर गोंय]]
+[[Category:बारदेस तालुका]]
+[[Category:गोंयचीं शारां आनी जागे]]
 == संदर्भ ==
