--- a/गोवा-व्हेला.mw
+++ b/गोवा-व्हेला.mw
@@ -82,13 +82,13 @@
 शारांत ३ खाजगी कनिश्ठ माध्यमिक शाळा  आसा.  
 शारांत ३ खाजगी माध्यमिक शाळा आसा.  
 शारांत १ खाजगी उच्च माध्यमिक शाळा आसा.  
-सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (फक्त वाणिज्य) PANAJI (१० किमी) हांगां आसा.
-सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (कला आणी शास्त्र) PANAJI (१० किमी) हांगां आसा.
+सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (फक्त वाणिज्य) पणजी (१० किमी) हांगां आसा.
+सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (कला आणी शास्त्र) पणजी (१० किमी) हांगां आसा.
 शारांत १ खाजगी पदवी महाविद्यालय (कला आणी वाणिज्य) आसा.  
-सगळ्यांत लागीं "खाजगी पदवी महाविद्यालय (कला, शास्त्र आणी वाणिज्य)" PANAJI (१० किमी) हांगां आसा.
+सगळ्यांत लागीं "खाजगी पदवी महाविद्यालय (कला, शास्त्र आणी वाणिज्य)"पणजी (१० किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय- विधी पणजी (१० किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय पदवी महाविद्यालय- विद्यापीठ पणजी (१२ किमी) हांगां आसा.
-सगळ्यांत लागीं खाजगी पदवी महाविद्यालय - हेर PANAJI (१२ किमी) हांगां आसा.
+सगळ्यांत लागीं खाजगी पदवी महाविद्यालय - हेर पणजी (१२ किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय वैजकी महाविद्यालय BAMBOLIM CT (६ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी अभियांत्रिकी महाविद्यालय VERNA CT (१३ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी वैवस्थापन संस्था  VERNA CT (१० किमी) हांगां आसा.
