--- a/भाटये.mw
+++ b/भाटये.mw
@@ -1,1 +1,2 @@
 भाटये (६२६७२२)
+भाटये हे उत्तर गोवा जिल्ह्यातल्या तिसवाडी तालुक्यातील २७५.५२ हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या गावात ३५६ कुटुंबाचे व पुराय १४८९ लोकसंख्या आसा.
