*Empty MediaWiki Message*

--- a/करंजोळ.mw
+++ b/करंजोळ.mw
@@ -2,27 +2,27 @@
 
 करंजोळ हे उत्तर गोवा जिल्ह्यातल्या सत्तरी तालुक्यातील ४०४८.६३ हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या गावात १७६ कुटुंबाचे व पुराय ८३९ लोकसंख्या आसा. हांगा लागीचे शार VALPOI १८ किलोमीटर अंतरावर आसा. हांगा ४१४ दादले आनीक ४२५ बायला आसा. हांगा अनुसूचित जातीचे लोक ० आसून अनुसूचित जमातीचे ० लोक आसात. ह्या गावाचो जनगणनेतलो स्थल निर्देशांक ६२६८२०  <ref>http://www.censusindia.gov.in/2011census/dchb/DCHB.html</ref> आसा.
 
-साक्षरताय ==  
+== साक्षरताय ==  
 * एकूण साक्षर लोकसंख्या: ५९६
 * साक्षर पुरुश लोकसंख्या: ३२५ (७८.५%)
 * साक्षर स्त्री लोकसंख्या: २७१ (६३.७६%)
 
- शैक्षणिक सुविधा ==  
+ == शैक्षणिक सुविधा ==  
  सगळ्यांत लागीं पूर्व-प्राथमिक शाळा (SANVORDEM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 ﻿गांवांत १ शासकीय प्राथमिक शाळा आसा. 
- सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (SANVORDEM) १० किलोमिटर परस चड अंतराचेर आसा.
- सगळ्यांत लागीं माध्यमिक शाळा (SANVORDEM) १० किलोमिटर परस चड अंतराचेर आसा.
- सगळ्यांत लागीं उच्च माध्यमिक शाळा (VALPOI) १० किलोमिटर परस चड अंतराचेर आसा.
- सगळ्यांत लागीं पदवी महाविद्यालय (SANQUELIM) १० किलोमिटर परस चड अंतराचेर आसा.
- सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (BANDORA C T) १० किलोमिटर परस चड अंतराचेर आसा.
- सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM C T) १० किलोमिटर परस चड अंतराचेर आसा.
- सगळ्यांत लागीं वैवस्थापन  संस्था  (PENHA-DE-FRANCA C T) १० किलोमिटर परस चड अंतराचेर आसा.
- सगळ्यांत लागीं पॉलिटेक्निक (MAEM) १० किलोमिटर परस चड अंतराचेर आसा.
- सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (ONDA C T) १० किलोमिटर परस चड अंतराचेर आसा.
- सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  (VALPOI) १० किलोमिटर परस चड अंतराचेर आसा.
- सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा (BICHOLIM) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (SANVORDEM) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं माध्यमिक शाळा (SANVORDEM) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं उच्च माध्यमिक शाळा (VALPOI) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं पदवी महाविद्यालय (SANQUELIM) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (BANDORA C T) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM C T) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं वैवस्थापन  संस्था  (PENHA-DE-FRANCA C T) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं पॉलिटेक्निक (MAEM) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (ONDA C T) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  (VALPOI) १० किलोमिटर परस चड अंतराचेर आसा.
+सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा (BICHOLIM) १० किलोमिटर परस चड अंतराचेर आसा.
 
-दळणवळण आनीक येरादारी ==
+== दळणवळण आनीक येरादारी ==
 गांवांत पोस्ट ऑफीस उपलब्ध ना.सगळ्यांत लागीं पोस्ट ऑफीस १० किलोमिटर परस चड अंतराचेर आसा.
 गांवांत उपपोस्ट ऑफीस उपलब्ध ना.सगळ्यांत लागीं उपपोस्ट ऑफीस १० किलोमिटर परस चड अंतराचेर आसा.
 गांवांत पोस्ट आनीक तार ऑफीस उपलब्ध ना.सगळ्यांत लागीं पोस्ट आनीक तार ऑफीस १० किलोमिटर परस चड अंतराचेर आसा.
@@ -37,7 +37,7 @@
 
 
 
- वैजकी सुविधा (शासकीय) ==
+== वैजकी सुविधा (शासकीय) ==
 सगळ्यांत लागीं समाजिक आरोग्य केंद्र १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं प्राथमिक आरोग्य केंद्र १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं प्राथमिक आरोग्य उपकेंद्र  १० किलोमिटर परस चड अंतराचेर आसा.
@@ -47,7 +47,6 @@
 सगळ्यांत लागीं पर्यायी वैजकी रुग्णालय १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं दवाखानो १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं पशुवैजकी रुग्णालय १० किलोमिटर परस चड अंतराचेर आसा.
-
 सगळ्यांत लागीं कुटुंब कल्याणकेंद्र १० किलोमिटर परस चड अंतराचेर आसा.
 
 
@@ -66,7 +65,7 @@
 गांवांत अन्य पद्धतीचे उदक पुरवण ना.
 
 
-नितळसाण ==
+== नितळसाण ==
 गांवांत बंद गटार उपलब्ध ना.
 गांवांत उघडें गटार उपलब्ध ना.
 नीट जलस्त्रोतांत सोडिल्ले सांड उदक
@@ -76,8 +75,6 @@
 गांवांत ग्रामीण उत्पादक केंद्रे ना जाल्यार सॅनिटरी हार्डवेअर मांड उपलब्ध ना.
 गांवांत ग्रामीण सॅनिटरी हार्डवेअर मांड उपलब्ध ना.
 गांवांत सामूहिक बायोगॅस ना जाल्यार उत्पादक पुनर्वापराची वेवस्था उपलब्ध ना.
-
-
 गांवांत रेल्वे स्थानक उपलब्ध ना.सगळ्यांत लागीं रेल्वे स्थानक १० किलोमिटर परस चड अंतराचेर आसा.
 गांवांत ऑटोरिक्षा व टमटम उपलब्ध ना.सगळ्यांत लागीं ऑटोरिक्षा व टमटम १० किलोमिटर परस चड अंतराचेर आसा.
 गांवांत टॅक्सी उपलब्ध ना.सगळ्यांत लागीं टॅक्सी १० किलोमिटर परस चड अंतराचेर आसा.
@@ -91,7 +88,6 @@
 राज्य महामार्ग गांवाक जोडूंक ना.सगळ्यांत लागीं राज्य महामार्ग १० किलोमिटर परस चड अंतराचेर आसा.
 जिल्ल्यातलो मुखेल रस्तो गांवाक जोडला.
 जिल्ल्यातलो अन्य रस्तो गांवाक जोडूंक ना.सगळ्यांत लागीं जिल्ल्यातलो अन्य रस्तो १० किलोमिटर परस चड अंतराचेर आसा.
-
 सगळ्यांत लागीं वाहतुकी करपासारखो जलमार्ग १० किलोमिटर परस चड अंतराचेर आसा.
 
 
@@ -107,7 +103,7 @@
 गांवांत आठवडयाचो बाजार उपलब्ध ना.सगळ्यांत लागीं आठवडयाचो बाजार १० किलोमिटर परस चड अंतराचेर आसा.
 गांवांत कृषी उत्पन्न बाजार समिती उपलब्ध ना.सगळ्यांत लागीं कृषी उत्पन्न बाजार समिती १० किलोमिटर परस चड अंतराचेर आसा.
 
-आरोग्य आरोग्य, पोषण आहार आनी मनोरंजन सुविधा ==
+== आरोग्य आरोग्य, पोषण आहार आनी मनोरंजन सुविधा ==
 गांवांत एकात्मिक बाल विकास योजना (पोषण आहार केंद्र) उपलब्ध ना.सगळ्यांत लागीं एकात्मिक बाल विकास योजना (पोषण आहार केंद्र) १० किलोमिटर परस चड अंतराचेर आसा.
 गांवांत बालवाडी (पोषण आहार केंद्र) उपलब्ध आसा.
 गांवांत इतर पोषण आहार केंद्र उपलब्ध आसा.
@@ -122,7 +118,7 @@
 गांवांत विधानसभा मतदान केंद्र उपलब्ध ना.सगळ्यांत लागीं विधानसभा मतदान केंद्र ५ किलोमिटरा परस कमी अंतराचेर आसा.
 गांवांत जन्म मृत्यु नोंदणी केंद्र उपलब्ध आसा.
 
-वीज ==
+== वीज ==
 २४ वरां वीज पुरवण घरगुती कामाखा तीर हुनाळ्यांत (एप्रिल-सप्टेंबर) दर दीसा उपलब्ध आसा.
 २४ वरां वीज पुरवण घरगुती कामाखातीर हिवाळ्यात (ऑक्टोबर-मार्च) दर दीसा उपलब्ध आसा.
 २४ वरां वीज पुरवण शेतकामाखातीर हुनाळ्यांत (एप्रिल-सप्टेंबर) दर दीसा उपलब्ध आसा.
@@ -132,7 +128,7 @@
 २४ वरां वीज पुरवण सगळ्यांखातीर हुनाळ्यांत (एप्रिल-सप्टेंबर) दर दीसा उपलब्ध आसा.
 २४ वरां वीज पुरवण सगळ्यांखातीर हिवाळ्यात (ऑक्टोबर-मार्च) दर दीसा उपलब्ध आसा.
 
-जमिनीचो वापर ==
+== जमिनीचो वापर ==
 करंजोळ ह्या गावात जमिनीचो वापर सकयलदिल्ल्याप्रमाण जाता (हेक्टर- क्षेत्रफळ):
 * रान  : ३५२७.२४
 * शेतकामा खातीर ना वापरिल्ली जमीन: ०
@@ -146,7 +142,7 @@
 * एकूण कोरड व्हांवपी जमीन: ३५४.३
 * एकूण बागायत जमीन: ८.८७
 
-शिंपणावळ सुविधा ==
+== शिंपणावळ सुविधा ==
 शिंपणावळ करपा खातीर स्रोत अशे आसात (क्षेत्रफळ हेक्टरांनी) :
 * कालवे: ०
 * बांयो / कूप नलिका: ०
@@ -154,7 +150,7 @@
 * ओढे: ०
 * हेर: ८.८७
 
-उत्पादन ==
+== उत्पादन ==
 करंजोळ ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): CASHEW NUTS,COUNTRY LIQUOR,WOODEN FURNITURE
 
 [[Category:devanagari]]	
