--- a/चोपडे.mw
+++ b/चोपडे.mw
@@ -25,3 +25,7 @@
 
 == चोपडे (६२६६५६) ==
 चोपडे हे उत्तर गोवा जिल्ह्यातल्या पेडणें तालुक्यातील २१५.८६ हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या गावात १९६ कुटुंबाचे व पुराय ९७४ लोकसंख्या आसा. हांगा लागीचे शार PERNEM १२ किलोमीटर अंतरावर आसा. हांगा ४७८ दादले आनीक ४९६ बायला आसा. हांगा अनुसूचित जातीचे लोक १६८ आसून अनुसूचित जमातीचे ० लोक आसात. ह्या गावाचो जनगणनेतलो स्थल निर्देशांक ६२६६५६  <ref>http://www.censusindia.gov.in/2011census/dchb/DCHB.html</ref> आसा.
+== साक्षरताय ==  
+* एकूण साक्षर लोकसंख्या: ७१४
+* साक्षर पुरुश लोकसंख्या: ३७७ (७८.८७%)
+* साक्षर स्त्री लोकसंख्या: ३३७ (६७.९४%)
