--- a/चोपडे.mw
+++ b/चोपडे.mw
@@ -29,3 +29,17 @@
 * एकूण साक्षर लोकसंख्या: ७१४
 * साक्षर पुरुश लोकसंख्या: ३७७ (७८.८७%)
 * साक्षर स्त्री लोकसंख्या: ३३७ (६७.९४%)
+== शैक्षणिक सुविधा ==  
+ ﻿गांवांत १ खाजगी पूर्व-प्राथमिक शाळा आसा.
+﻿गांवांत १ शासकीय प्राथमिक शाळा आसा. 
+ सगळ्यांत लागीं कनिष्ठ माध्यमिक शाळा (AGARWADO) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+ सगळ्यांत लागीं माध्यमिक शाळा (AGARWADO) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+ सगळ्यांत लागीं उच्च माध्यमिक शाळा (PERNEM) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं पदवी महाविद्यालय (PERNEM RURAL) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं अभियांत्रिकी  महाविद्यालय (BANDORA C T) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं वैजकी महाविद्यालय (BAMBOLIM C T) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं वैवस्थापन  संस्था  (PENHA-DE-FRANCA C T) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं पॉलिटेक्निक (PANAJI) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (TUEM) १० किलोमिटर परस चड अंतराचेर आसा.
+ सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  (PERNEM) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+ सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा (PENHA-DE-FRANCA C T) १० किलोमिटर परस चड अंतराचेर आसा.
