--- a/भेनोर्डे.mw
+++ b/भेनोर्डे.mw
@@ -5,3 +5,9 @@
 * एकूण साक्षर लोकसंख्या: ४१३
 *     साक्षर पुरुश लोकसंख्या: २२८ (७५.५%)
 *     साक्षर स्त्री लोकसंख्या: १८५ (६०.२६%)
+== 
+शैक्षणिक सुविधा ==
+
+ सगळ्यांत लागीं पूर्व-प्राथमिक शाळा (BALI) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+
+﻿गांवांत १ शासकीय प्राथमिक शाळा आसा. ﻿गांवांत १ शासकीय कनिष्ठ माध्यमिक शाळा आसा.
