--- a/कुर्टी.mw
+++ b/कुर्टी.mw
@@ -29,3 +29,4 @@
 शैक्षणिक सुविधा
 
 शारांत ६ शासकीय प्राथमिक शाळा आसा. शारांत २ खाजगी प्राथमिक शाळा आसा.
+सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (फक्त वाणिज्य) PONDA (१ किमी) हांगां आसा.
