--- a/गोवा-व्हेला.mw
+++ b/गोवा-व्हेला.mw
@@ -94,7 +94,7 @@
 सगळ्यांत लागीं खाजगी वैवस्थापन संस्था  VERNA CT (१० किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी पॉलिटेक्निक VERNA CT (१७ किमी) हांगां आसा.
 ﻿शारांत १ शासकीय वेवसायीक प्रशिक्षण शाळा आसा.   
-सगळ्यांत लागीं शासकीय अनौपचारीक प्रशिक्षणकेंद्र  PANAJI (१० किमी) हांगां आसा.
+सगळ्यांत लागीं शासकीय अनौपचारीक प्रशिक्षणकेंद्र  पणजी (१० किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय अपंगां खातीर खाशेली शाळा PENHA DE FRANCA CT (१६ किमी) हांगां आसा.
 == सुविधा ==
 ﻿शारांत १ शासकीय अनाथाश्रम आसा.   
@@ -103,7 +103,7 @@
 सगळ्यांत लागीं शासकीय खेळांगण PANAJI (१० किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी चित्रपटगृह PANAJI (१० किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी सभाघर PANAJI (१० किमी) हांगां आसा.
-सगळ्यांत लागीं शासकीय भौशीक ग्रंथालय  PANAJI (१० किमी) हांगां आसा.
+सगळ्यांत लागीं शासकीय भौशीक ग्रंथालय  पणजी(१० किमी) हांगां आसा.
 == उत्पादन ==
 गोवा-व्हेला ह्या शारांत मुखा वयल्या वस्तूंचें उत्पादन जाता ( म्हत्वाच्या देंवत्या अनुक्रमान): SOFT DRINKS,CHILLY PRODUCTS,COCONUT PRODUCTS
 == बाजार आनी सावकारी पेडी  ==
