--- a/चरावणें.mw
+++ b/चरावणें.mw
@@ -23,3 +23,4 @@
 |अधिकृत_भास=[[कोंकणी, मराठी]]
 }}
 == चरावणें ==
+चरावणें हे उत्तर गोवा जिल्ह्यातल्या सत्तरी तालुक्यातील ५९२.६५ हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या गावात १५३ कुटुंबाचे व पुराय ७०८ लोकसंख्या आसा. हांगा लागीचे शार VALPOI १४ किलोमीटर अंतरावर आसा.
