--- a/भाटये.mw
+++ b/भाटये.mw
@@ -9,3 +9,4 @@
 == '''शैक्षणिक सुविधा''' ==
 
 == '''वैजकी सुविधा (शासकीय)''' ==
+सगळ्यांत लागीं समाजिक आरोग्य केंद्र १० किलोमिटर परस चड अंतराचेर आसा.
