*Empty MediaWiki Message*

--- a/गोवा-व्हेला.mw
+++ b/गोवा-व्हेला.mw
@@ -101,7 +101,7 @@
 सगळ्यांत लागीं नोकरी करपी स्त्रियांचें सरकारी निवास (हॉस्टेल) PENHA DE FRANCA CT (१६ किमी) हांगां आसा.
 ﻿शारांत १ शासकीय वृद्धाश्रम आसा.   
 सगळ्यांत लागीं शासकीय खेळांगण पणजी (१० किमी) हांगां आसा.
-सगळ्यांत लागीं खाजगी चित्रपटगृह PANAJI (१० किमी) हांगां आसा.
+सगळ्यांत लागीं खाजगी चित्रपटगृह पणजी (१० किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी सभाघर PANAJI (१० किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय भौशीक ग्रंथालय  पणजी(१० किमी) हांगां आसा.
 == उत्पादन ==
