--- a/कुर्टी.mw
+++ b/कुर्टी.mw
@@ -31,3 +31,4 @@
 शारांत ६ शासकीय प्राथमिक शाळा आसा. शारांत २ खाजगी प्राथमिक शाळा आसा.
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (फक्त वाणिज्य) PONDA (१ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (कला आणी शास्त्र) PANAJI (३० किमी) हांगां आसा.
+सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (कला आणी वाणिज्य) BANDORA CT (२ किमी) हांगां आसा.
