--- a/चरावणें.mw
+++ b/चरावणें.mw
@@ -23,4 +23,4 @@
 |अधिकृत_भास=[[कोंकणी, मराठी]]
 }}
 == चरावणें ==
-चरावणें हे उत्तर गोवा जिल्ह्यातल्या सत्तरी तालुक्यातील ५९२.६५ हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या गावात १५३ कुटुंबाचे व पुराय ७०८ लोकसंख्या आसा. हांगा लागीचे शार VALPOI १४ किलोमीटर अंतरावर आसा.
+चरावणें हे उत्तर गोवा जिल्ह्यातल्या सत्तरी तालुक्यातील ५९२.६५ हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या गावात १५३ कुटुंबाचे व पुराय ७०८ लोकसंख्या आसा. हांगा लागीचे शार VALPOI १४ किलोमीटर अंतरावर आसा. हांगा ३६१ दादले आनीक ३४७ बायला आसा. हांगा अनुसूचित जातीचे लोक २ आसून अनुसूचित जमातीचे ० लोक आसात. ह्या गावाचो जनगणनेतलो स्थल निर्देशांक ६२६७७३  <ref>http://www.censusindia.gov.in/2011census/dchb/DCHB.html</ref> आसा.
