*Empty MediaWiki Message*

--- a/कुर्टी.mw
+++ b/कुर्टी.mw
@@ -32,3 +32,4 @@
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (फक्त वाणिज्य) PONDA (१ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (कला आणी शास्त्र) PANAJI (३० किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (कला आणी वाणिज्य) BANDORA CT (२ किमी) हांगां आसा.
+सगळ्यांत लागीं "शासकीय पदवी महाविद्यालय (कला, शास्त्र आणी वाणिज्य)" CANDOLA CT (२४ किमी) हांगां आसा.
