--- a/चरावणें.mw
+++ b/चरावणें.mw
@@ -31,3 +31,5 @@
 * साक्षर स्त्री लोकसंख्या: २४० (६९.१६%)
 
 == शैक्षणिक सुविधा ==
+सगळ्यांत लागीं पूर्व-प्राथमिक शाळा (DONGURLI) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+﻿गांवांत १ शासकीय प्राथमिक शाळा आसा.
