--- a/कुर्टी.mw
+++ b/कुर्टी.mw
@@ -34,3 +34,4 @@
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय (कला आणी वाणिज्य) BANDORA CT (२ किमी) हांगां आसा.
 सगळ्यांत लागीं "शासकीय पदवी महाविद्यालय (कला, शास्त्र आणी वाणिज्य)" CANDOLA CT (२४ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय- विधी PANAJI (३२ किमी) हांगां आसा.
+सगळ्यांत लागीं शासकीय पदवी महाविद्यालय- विद्यापीठ PANAJI (३२ किमी) हांगां आसा.
