*Empty MediaWiki Message*

--- a/कुर्टी.mw
+++ b/कुर्टी.mw
@@ -35,3 +35,4 @@
 सगळ्यांत लागीं "शासकीय पदवी महाविद्यालय (कला, शास्त्र आणी वाणिज्य)" CANDOLA CT (२४ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय- विधी PANAJI (३२ किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय पदवी महाविद्यालय- विद्यापीठ PANAJI (३२ किमी) हांगां आसा.
+सगळ्यांत लागीं खाजगी पदवी महाविद्यालय - हेर PONDA (२ किमी) हांगां आसा.
