--- a/नागोवा.mw
+++ b/नागोवा.mw
@@ -23,3 +23,4 @@
 |अधिकृत_भास=[[कोंकणी, मराठी]]
 }}
 == नागोवा (६२६६७४) ==
+नागोवा हे उत्तर गोवा जिल्ह्यातल्या बार्देस तालुक्यातील १५४.५७ हेक्टर क्षेत्राचे गाव आसून २०११ च्या जनगणनेनुसार ह्या गावात ३५१ कुटुंबाचे व पुराय १४५५ लोकसंख्या आसा. हांगा लागीचे शार MAPUSA ६ किलोमीटर अंतरावर आसा. हांगा ७३२ दादले आनीक ७२३ बायला आसा. हांगा अनुसूचित जातीचे लोक ४ आसून अनुसूचित जमातीचे १४ लोक आसात. ह्या गावाचो जनगणनेतलो स्थल निर्देशांक ६२६६७४
