*Empty MediaWiki Message*

--- a/कुर्टी.mw
+++ b/कुर्टी.mw
@@ -36,3 +36,4 @@
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय- विधी PANAJI (३२ किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय पदवी महाविद्यालय- विद्यापीठ PANAJI (३२ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय - हेर PONDA (२ किमी) हांगां आसा.
+सगळ्यांत लागीं शासकीय वैजकी महाविद्यालय BAMBOLIM CT (३५ किमी) हांगां आसा.
