--- a/भेनोर्डे.mw
+++ b/भेनोर्डे.mw
@@ -17,7 +17,7 @@
 सगळ्यांत लागीं कुटुंब कल्याणकेंद्र १० किलोमिटर परस चड अंतराचेर आसा.
 गांवांत २ एमबीबीएस पदवीधर वैजकी वेवसायी आसा. गांवांत २ अन्य पदवीधर वैजक वेवसायी आसा. गांवांत २ पदवी नाशिल्ले वैजक वेवसायी आसा. ﻿गांवांत १ पिढीजात वैद्य आसा.
 
-पिवपाचे उदक
+== पिवपाचे उदक ==
 
 गांवांत शुद्धीकरण केल्लें नळाचें उदक पुरवण आसा. गांवांत शुद्धीकरण करूंक नशिल्लें उदक पुरवण ना. गांवांत धापिल्लें बांयचें उदक पुरवण ना. गांवांत उघड्या बांयचें उदक पुरवण आसा. गांवांत हॅन्डपंपचें उदक पुरवण ना. गांवांत ट्यूबवेलच्या/बोअरवेलाचो उदक पुरवण ना. गांवांत झरीचें उदक पुरवण आसा. गांवांत न्हय/खाजनाचें उदक पुरवण आसा. गांवांत तळी/कोंड उदक पुरवण ना. गांवांत अन्य पद्धतीचे उदक पुरवण ना.
 
