*Empty MediaWiki Message*

--- a/अकाली.mw
+++ b/अकाली.mw
@@ -6,7 +6,7 @@
 
 महाराजा रणजीतसिंह (इ.स. 1780 - 1839) हाच्या काळांत अकाली सेनादल भरभराटीच्या तेंगशेर पावलें. अकाली सैन्याच्या बळाचेरूच मुलतान, काश्मिर, अटक, नौशेरा, जमशेद, अफगाणीस्तान हांगा रणजितसिंहान आपलो राज्यविस्तार केलो. त्या वेळार फुलसिंग हो अकालींचो फुडारी आशिल्लो. इ.स. 1809 त अमृतसर हांगा मेटकाफ हांच्या सैन्याचेर तो आपल्या जला सयत तुटून पडलो आनी ताका लागून नामनेक पावलो. इ.स. 1818 त वेढ्यांत सांपडिल्लो मुलतानचो किल्लो ताणें मोटो पराक्रम करून सर केलो. ताचो हो पराक्रम पळोवन रणजितसिंहान ताका सिंध देगणांत मुखेल अधिकारी म्हूण नेमलो. फुडें 1823 सालांत तेरीच्या लडायेंत हाणें आपल्या दला सयत युसुफझईचेर घुरी घाली. युसुफझईचो पराभव जालो खरो पूण फुलसिंगाक ह्या झुजांत मरण आयलें.
 
-शीख गुरूंनी आपल्या धर्माच्या प्रसारा खातीर जायतीं गुरूद्वारां स्थापन केल्लीं. तांच्या चरितार्था खातीर रणजितसिंहान व्हडल्यो- व्हडल्यो जहागिऱ्यो लावन दिल्ल्यो. इंग्लेज राद्यांत ह्या जहागिऱ्यांचे अधिकार जांच्या हातांत आशिल्ले, तातूंतले चडशे महंत फुडें वायट कर्तुपां करपाक लागले. ताका लागून गुरूद्वारां हीं अनितीची आंगरा जाली. उद्धार करपा खातीर 1920 सालांत अकाली तरनाट्यांनी आपलें नवें सेना ददल संघटित केलें. तांणी मठांतसून वायट करण्यो करपी महंतांक धांवडायले आनी मठ आपल्या ताब्यांत घेतलो.
+शीख गुरूंनी आपल्या धर्माच्या प्रसारा खातीर जायतीं गुरूद्वारां स्थापन केल्लीं. तांच्या चरितार्था खातीर रणजितसिंहान व्हडल्यो- व्हडल्यो जहागिऱ्यो लावन दिल्ल्यो. इंग्लेज राद्यांत ह्या जहागिऱ्यांचे अधिकार जांच्या हातांत आशिल्ले, तातूंतले चडशे महंत फुडें वायट कर्तुपां करपाक लागले. ताका लागून गुरूद्वारां हीं अनितीची आंगरा जाली.अशा उद्धार करपा खातीर 1920 सालांत अकाली तरनाट्यांनी आपलें नवें सेना ददल संघटित केलें. तांणी मठांतसून वायट करण्यो करपी महंतांक धांवडायले आनी मठ आपल्या ताब्यांत घेतलो.
 
 
 
