*Empty MediaWiki Message*

--- a/कुर्टी.mw
+++ b/कुर्टी.mw
@@ -37,3 +37,4 @@
 सगळ्यांत लागीं शासकीय पदवी महाविद्यालय- विद्यापीठ PANAJI (३२ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय - हेर PONDA (२ किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय वैजकी महाविद्यालय BAMBOLIM CT (३५ किमी) हांगां आसा.
+सगळ्यांत लागीं शासकीय अभियांत्रिकी महाविद्यालय BANDORA CT (७ किमी) हांगां आसा.
