--- a/खोडयें.mw
+++ b/खोडयें.mw
@@ -31,3 +31,6 @@
 * एकूण साक्षर लोकसंख्या: ६०
 * साक्षर पुरुश लोकसंख्या: ३० (८८.२४%)
 * साक्षर स्त्री लोकसंख्या: ३० (८१.०८%)
+== शैक्षणिक सुविधा ==  
+सगळ्यांत लागीं पूर्व-प्राथमिक शाळा (VALPOI) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+﻿गांवांत १ शासकीय प्राथमिक शाळा आसा.
