--- a/चोपडे.mw
+++ b/चोपडे.mw
@@ -148,3 +148,9 @@
 * एकूण कोरड व्हांवपी जमीन: ९८.८२
 * एकूण बागायत जमीन: २.४२
 == शिंपणावळ सुविधा ==
+शिंपणावळ करपा खातीर स्रोत अशे आसात (क्षेत्रफळ हेक्टरांनी) :
+* कालवे: ०
+* बांयो / कूप नलिका: ०
+* तळी: ०
+* ओढे: ०
+* हेर: २.४२
