--- a/चोपडे.mw
+++ b/चोपडे.mw
@@ -154,3 +154,13 @@
 * तळी: ०
 * ओढे: ०
 * हेर: २.४२
+== उत्पादन ==
+चोपडे ह्या गावांत सकयल दिल्ल्या वस्तूंचें उत्पादन जाता( महत्वाचें सकयल दिल्ल्या प्रमाणें): RICE,CHILLIES
+
+
+[[वर्ग:[[उत्तर गोवा]]]]
+[[वर्ग:[[पेडणें]]]]
+[[वर्ग:[[उत्तर गोवा जिल्ल्यांतले गांव]]]]
+
+
+== संदर्भ ==
