--- a/खोडयें.mw
+++ b/खोडयें.mw
@@ -44,3 +44,8 @@
 सगळ्यांत लागीं पॉलिटेक्निक (MAEM) १० किलोमिटर परस चड अंतराचेर आसा.
 सगळ्यांत लागीं वेवसायिक प्रशिक्षण शाळा (ONDA C T) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 सगळ्यांत लागीं अनौपचारिक प्रशिक्षणकेंद्र  (PISSURLEM) ५ किलोमिटरा परस कमी अंतराचेर आसा.
+सगळ्यांत लागीं अपंगांखातीर खाशेली शाळा (BICHOLIM) १० किलोमिटर परस चड अंतराचेर आसा.
+ 
+
+
+== वैजकी सुविधा (शासकीय) ==
