*Empty MediaWiki Message*

--- a/गोवा-व्हेला.mw
+++ b/गोवा-व्हेला.mw
@@ -51,7 +51,7 @@
 गोवा-व्हेला हें उत्तर गोवा जिल्ल्यांतल्या तिसवाडी तालुक्यांतलें १०.१ चौ. किमी. क्षेत्राचें शार आसून २०११ चे जनगणने प्रमाण ह्या शारांत १०५५ कुटुंबां वा वट्ट ४३२२ लोकसंख्या आसा. जिल्लो मुख्यालय,पणजी हांगां ९ किलोमीटर अंतराचेर आसा. राज्याची राजधानी पणजी हांगां ९ किलोमीटर अंतराचेर आसा.   हातूंत २१२९ दादले आनी २१९३ बांयलां आसात. हातूंत अनुसुचीत जातीचे लोक २० आसून अनुसुचीत जमातीचे ११६ लोक आसात. ह्या गांवचो जनगणनेतचो स्थळ निर्देशांक ६२६७३४  <ref>http://www.censusindia.gov.in/2011census/dchb/DCHB.html</ref> आहे.
 लोकसंख्योप्रमाणे शाराचो दर्जो VI (लोकसंख्या_एकूण < ५,०००).
 शाराची नागरी स्थीती आसा. 'सर्वेक्षण शार'.
-१  लाखां परस चड लोकसंख्या आशिल्लें सगळ्यांत लागींचें बेळगांव हें शार १७० किमी अंतराचेर आसा. ५  लाखां परस चड लोकसंख्या आशिल्लें सगळ्यांत लागींचें PUNE हें शार ४८८ किमी अंतराचेर आसा. रेल्व स्टेशन १६ किमी अंतराचेर करमळे CT हांगां आसा.
+१  लाखां परस चड लोकसंख्या आशिल्लें सगळ्यांत लागींचें बेळगांव हें शार १७० किमी अंतराचेर आसा. ५  लाखां परस चड लोकसंख्या आशिल्लें सगळ्यांत लागींचें पुणे हें शार ४८८ किमी अंतराचेर आसा. रेल्व स्टेशन १६ किमी अंतराचेर करमळे CT हांगां आसा.
 == हवामान ==  
 * पावस (मिमी.): २९५६.८९ 
 * कमाल तापमान (सेल्सिअस): ३१.५३
@@ -90,9 +90,9 @@
 सगळ्यांत लागीं शासकीय पदवी महाविद्यालय- विद्यापीठ पणजी (१२ किमी) हांगां आसा.
 सगळ्यांत लागीं खाजगी पदवी महाविद्यालय - हेर पणजी (१२ किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय वैजकी महाविद्यालय बांबोळे CT (६ किमी) हांगां आसा.
-सगळ्यांत लागीं खाजगी अभियांत्रिकी महाविद्यालय VERNA CT (१३ किमी) हांगां आसा.
-सगळ्यांत लागीं खाजगी वैवस्थापन संस्था  VERNA CT (१० किमी) हांगां आसा.
-सगळ्यांत लागीं खाजगी पॉलिटेक्निक VERNA CT (१७ किमी) हांगां आसा.
+सगळ्यांत लागीं खाजगी अभियांत्रिकी महाविद्यालय वेर्णा CT (१३ किमी) हांगां आसा.
+सगळ्यांत लागीं खाजगी वैवस्थापन संस्था  वेर्णा CT (१० किमी) हांगां आसा.
+सगळ्यांत लागीं खाजगी पॉलिटेक्निक वेर्णा CT (१७ किमी) हांगां आसा.
 ﻿शारांत १ शासकीय वेवसायीक प्रशिक्षण शाळा आसा.   
 सगळ्यांत लागीं शासकीय अनौपचारीक प्रशिक्षणकेंद्र  पणजी (१० किमी) हांगां आसा.
 सगळ्यांत लागीं शासकीय अपंगां खातीर खाशेली शाळा PENHA DE FRANCA CT (१६ किमी) हांगां आसा.
