--- a/भेनोर्डे.mw
+++ b/भेनोर्डे.mw
@@ -8,7 +8,7 @@
 
 == शैक्षणिक सुविधा ==
 
-सगळ्यांत लागीं पूर्व-प्राथमिक शाळा (BALI) ५ ते १० किलोमिटराच्या अंतराचेर आसा.
+सगळ्यांत लागीं पूर्व-प्राथमिक शाळा बाळ्ळी ५ ते १० किलोमिटराच्या अंतराचेर आसा.
 गांवांत १ शासकीय प्राथमिक शाळा आसा. ﻿गांवांत १ शासकीय कनिष्ठ माध्यमिक शाळा आसा.
 
 == वैजकी सुविधा (शासकीय) ==
